LPS-60128 lang keys

--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_ar.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=فروع متداخلة
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=يعرض قائمة تنقل لموضوع الكلاسيكية. (Automatic Translation)
-portlet-display-template-description-custom=يعرض قالب تنقل مخصصة. (Automatic Translation)
-portlet-display-template-description-from-level-0=تعرض شجرة تنقل بدءاً مستوى 0 التنقل صفحة (صفحات). (Automatic Translation)
-portlet-display-template-description-from-level-1=تعرض شجرة تنقل بدءاً المستوى 1 الملاحة صفحة (صفحات). (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=تعرض شجرة تنقل بدءاً المستوى 1 الملاحة صفحة (صفحات). كافة المستويات المستوى 1 صفحة فرعية موسعة، بما في ذلك المستويات الفرعية المشابهة. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=تعرض شجرة تنقل بدءاً المستوى 1 الملاحة صفحة (صفحات). يتم عرض الصفحة الأصل كعنوان للملاحة القائمة. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=تعرض شجرة تنقل بدءاً المستوى 2 التنقل صفحة (صفحات). يتم عرض الصفحة الأصل كعنوان للملاحة القائمة. (Automatic Translation)
-portlet-display-template-description-nav-pills=يعرض قائمة تنقل مع الملاحة Bootstrap حبوب منع الحمل. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=يعرض قائمة تنقل مع حبوب الملاحة Bootstrap له ما يبرره. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=يعرض قائمة تنقل مع الملاحة Bootstrap مكدسة حبوب منع الحمل. (Automatic Translation)
-portlet-display-template-description-nav-tabs=يعرض قائمة تنقل مع علامات تبويب التنقل Bootstrap. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=يعرض قائمة تنقل مع علامات تبويب التنقل Bootstrap له ما يبرره. (Automatic Translation)
-portlet-display-template-description-navbar-default=يعرض قائمة تنقل باستخدام شريط تنقل Bootstrap. (Automatic Translation)
+portlet-display-template-description-list-menu=يعرض ملاحة قائمة مع قائمة. (Automatic Translation)
+portlet-display-template-description-nav-pills=يعرض قائمة تنقل مع عناصر التنقل التي تظهر كحبوب منع الحمل. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=يعرض قائمة تنقل مع عناصر التنقل له ما يبرره كما هو موضح حبوب منع الحمل. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=يعرض قائمة تنقل مع عناصر التنقل مكدسة سيظهر كحبوب منع الحمل. (Automatic Translation)
+portlet-display-template-description-nav-tabs=يعرض قائمة تنقل مع عناصر التنقل كما هو موضح علامات التبويب. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=يعرض قائمة تنقل مع عناصر التنقل له ما يبرره كما هو موضح علامات التبويب. (Automatic Translation)
+portlet-display-template-description-navbar-blank=يعرض قائمة تنقل باستخدام شريط تنقل على غرار الحد الأدنى. (Automatic Translation)
+portlet-display-template-description-navbar-default=يعرض قائمة تنقل باستخدام شريط تنقل على غرار افتراضي. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=يحتوي على وحدات ماكرو المشتركة للملاحة القائمة قوالب. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=يعرض فتات خبز أفقياً. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=تعرض قائمة منسدلة ملاحة مع أزرار Bootstrap. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=شريط التنقل على غرار الحد الأدنى (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=من المستوى 0
-portlet-display-template-name-from-level-1=من المستوى 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=من المستوى الأول لجميع المستويات الفرعية (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=من المستوى 1 مع العنوان
-portlet-display-template-name-from-level-2-with-title=من المستوى 2 مع العنوان
-portlet-display-template-name-nav-pills=Nav حبوب منع الحمل (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=حبوب منع الحمل Nav تبريرها (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=حبوب منع الحمل Nav مكدسة (Automatic Translation)
-portlet-display-template-name-nav-tabs=علامات تبويب التنقل (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=علامات التبويب Nav تبريرها (Automatic Translation)
-portlet-display-template-name-navbar-default=شريط التنقل الافتراضي (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=مقارنة بشريط التنقل
+portlet-display-template-description-split-button-dropdowns=تعرض قائمة منسدلة ملاحة مع عناصر القائمة الجذر تظهر كأزرار. (Automatic Translation)
+portlet-display-template-name-list-menu=قائمة قائمة (Automatic Translation)
+portlet-display-template-name-nav-pills=حبوب منع الحمل الأفقي (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=حبوب منع الحمل ما يبرره (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=حبوب منع الحمل مكدسة (Automatic Translation)
+portlet-display-template-name-nav-tabs=علامات التبويب (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=علامات التبويب له ما يبرره (Automatic Translation)
+portlet-display-template-name-navbar-blank=شريط على غرار الحد الأدنى (Automatic Translation)
+portlet-display-template-name-navbar-default=بار الافتراضي على غرار (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=التنقل المشترك وحدات الماكرو (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Dropdowns زر الانقسام (Automatic Translation)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
