--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_bg.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Вложени деца
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Показва меню, навигация за класически тема. (Automatic Translation)
-portlet-display-template-description-custom=Показва потребителски навигация шаблон. (Automatic Translation)
-portlet-display-template-description-from-level-0=Показва навигация дърво, започвайки от ниво 0 навигация страница(и). (Automatic Translation)
-portlet-display-template-description-from-level-1=Показва навигация дърво, започвайки от ниво 1 навигация страница(и). (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Показва навигация дърво, започвайки от ниво 1 навигация страница(и). Всички под-нива, ниво 1 страница са разширени, включително сиб поднива. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Показва навигация дърво, започвайки от ниво 1 навигация страница(и). На страницата майки се показва като заглавие на менюто за навигация. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Показва навигация дърво, започвайки от ниво 2 навигационни страници. На страницата майки се показва като заглавие на менюто за навигация. (Automatic Translation)
-portlet-display-template-description-nav-pills=Показва меню, навигация с Bootstrap навигация хапчета. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Показва меню, навигация с обосновани Bootstrap навигация хапчета. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Показва меню, навигация с наслагване Bootstrap навигация хапчета. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Показва меню, навигация с Bootstrap навигация раздели. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Показва меню, навигация с обосновани Bootstrap навигация раздели. (Automatic Translation)
-portlet-display-template-description-navbar-default=Показва меню, навигация с Bootstrap навигационна лента. (Automatic Translation)
+portlet-display-template-description-list-menu=Показва навигация меню със списък. (Automatic Translation)
+portlet-display-template-description-nav-pills=Показва меню, навигация с навигационни елементи, показани като хапчета. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Показва меню, навигация с обосновани навигационни елементи, показани като хапчета. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Показва меню, навигация с наслагване навигационни елементи, показани като хапчета. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Показва меню, навигация с навигационни елементи, показани като разделите. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Показва меню, навигация с обосновани навигационни елементи, показани като разделите. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Показва меню, навигация с минимално оформена навигационна лента. (Automatic Translation)
+portlet-display-template-description-navbar-default=Показва меню, навигация с оформена навигационна лента по подразбиране. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Съдържа общата макроси за навигация меню шаблони. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Показва кое хоризонтално. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Показва падащо меню навигация меню с Bootstrap бутони. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Минимално оформена навигационна лента (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=From Level 0 (Automatic Copy)
-portlet-display-template-name-from-level-1=From Level 1 (Automatic Copy)
-portlet-display-template-name-from-level-1-to-all-sub-levels=От ниво 1 до всички поднива (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=From Level 1 with Title (Automatic Copy)
-portlet-display-template-name-from-level-2-with-title=From Level 2 with Title (Automatic Copy)
-portlet-display-template-name-nav-pills=NAV хапчета (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV хапчета оправдано (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV хапчета с наслагване (Automatic Translation)
-portlet-display-template-name-nav-tabs=Навигация раздели (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=Навигация раздели оправдано (Automatic Translation)
-portlet-display-template-name-navbar-default=Навигационна лента по подразбиране (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relative with Breadcrumb (Automatic Copy)
+portlet-display-template-description-split-button-dropdowns=Показва падащо меню навигация меню с корен меню елементи, показани като бутони. (Automatic Translation)
+portlet-display-template-name-list-menu=Меню списък (Automatic Translation)
+portlet-display-template-name-nav-pills=Хапчета хоризонтално (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Хапчета за оправдано (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Хапчета с наслагване (Automatic Translation)
+portlet-display-template-name-nav-tabs=Раздели (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Раздели оправдано (Automatic Translation)
+portlet-display-template-name-navbar-blank=Бар минимално оформена (Automatic Translation)
+portlet-display-template-name-navbar-default=Бар по подразбиране стил (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Навигация общи макроси (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Сплит бутон падащите менюта (Automatic Translation)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
