--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_de.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Verschachtelte Unterelemente
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Zeigt ein Navigationsmenü für das klassische Design. (Automatic Translation)
-portlet-display-template-description-custom=Zeigt eine benutzerdefinierte Navigations-Template. (Automatic Translation)
-portlet-display-template-description-from-level-0=Zeigt eine Navigationsstruktur ab Ebene 0-Navigation-Seite(n). (Automatic Translation)
-portlet-display-template-description-from-level-1=Zeigt eine Navigationsstruktur, beginnend mit der Stufe 1 Navigation Seite(n). (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Zeigt eine Navigationsstruktur, beginnend mit der Stufe 1 Navigation Seite(n). Alle Unterebenen der Stufe 1-Seite sind erweitert, einschließlich Geschwister Unterebenen. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Zeigt eine Navigationsstruktur, beginnend mit der Stufe 1 Navigation Seite(n). Die übergeordnete Seite wird als Titel im Navigationsmenü angezeigt. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Zeigt eine Navigationsstruktur ab der Stufe 2 Navigation Seite(n). Die übergeordnete Seite wird als Titel im Navigationsmenü angezeigt. (Automatic Translation)
-portlet-display-template-description-nav-pills=Zeigt ein Navigationsmenü mit Bootstrap Navigation Pillen. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Zeigt ein Navigationsmenü mit begründeten Bootstrap Navigation Pillen. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Zeigt ein Navigationsmenü mit gestapelten Bootstrap Navigation Pillen. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Zeigt ein Navigationsmenü mit Bootstrap Navigationsregisterkarten. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Zeigt ein Navigationsmenü mit begründeten Bootstrap Navigationsregisterkarten. (Automatic Translation)
-portlet-display-template-description-navbar-default=Ein Navigations-Menü mit einer Bootstrap-Navigationsleiste angezeigt. (Automatic Translation)
+portlet-display-template-description-list-menu=Zeigt ein Navigations-Menü mit einer Liste. (Automatic Translation)
+portlet-display-template-description-nav-pills=Zeigt ein Navigationsmenü mit Navigationselementen gezeigt als Pillen. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Zeigt ein Navigationsmenü mit begründeten Navigationspunkte als Pillen. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Zeigt ein Navigationsmenü mit gestapelten Navigationspunkte als Pillen. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Zeigt ein Navigationsmenü mit Navigationselementen als Registerkarten angezeigt. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Zeigt ein Navigationsmenü mit begründeten Navigationspunkte als Registerkarten angezeigt. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Zeigt ein Navigations-Menü mit einer minimal gestaltete Navigationsleiste. (Automatic Translation)
+portlet-display-template-description-navbar-default=Ein Navigations-Menü mit einer gestalteten Standard-Navigationsleiste angezeigt. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Enthält gemeinsame Makros für Navigation-Menü-Vorlagen. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Breadcrumb zeigt horizontal. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Zeigt eine Dropdown-Navigation-Menü mit Bootstrap-Schaltflächen. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimal gestalteten Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Ab Ebene 0
-portlet-display-template-name-from-level-1=Ab Ebene 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Von Stufe 1 bis alle Unterebenen (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Ab Ebene 1 mit Titel
-portlet-display-template-name-from-level-2-with-title=Ab Ebene 2 mit Titel
-portlet-display-template-name-nav-pills=NAV-Pillen (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV-Pillen gerechtfertigt (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV-Pillen gestapelt (Automatic Translation)
-portlet-display-template-name-nav-tabs=NAV-Tabs (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV-Tabs gerechtfertigt (Automatic Translation)
-portlet-display-template-name-navbar-default=Navbar Standard (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relativ mit Breadcrumb
+portlet-display-template-description-split-button-dropdowns=Zeigt eine Dropdown-Navigation-Menü mit Stammmenüelemente als Schaltflächen angezeigt. (Automatic Translation)
+portlet-display-template-name-list-menu=Menüliste (Automatic Translation)
+portlet-display-template-name-nav-pills=Pillen-Horizontal (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Pillen gerechtfertigt (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Pillen, gestapelt (Automatic Translation)
+portlet-display-template-name-nav-tabs=Tabs (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Registerkarten gerechtfertigt (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar Stil minimal (Automatic Translation)
+portlet-display-template-name-navbar-default=Gestylten Bar Standard (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Navigation allgemeine Makros (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split-Button-Dropdowns (Automatic Translation)
 root-layout-level=Stammseitenebene
 root-layout-level-help=Root Page Level (Automatic Copy)
