--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_el.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Ενσωματωμένα παιδιά
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Εμφανίζει ένα μενού πλοήγησης για το κλασικό θέμα. (Automatic Translation)
-portlet-display-template-description-custom=Εμφανίζει ένα πρότυπο προσαρμοσμένης πλοήγησης. (Automatic Translation)
-portlet-display-template-description-from-level-0=Εμφανίζει ένα δέντρο πλοήγησης που αρχίζει από το επίπεδο 0 σελίδα(ες) πλοήγησης. (Automatic Translation)
-portlet-display-template-description-from-level-1=Εμφανίζει ένα δέντρο πλοήγησης που αρχίζει από το επίπεδο 1 σελίδα(ες) πλοήγησης. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Εμφανίζει ένα δέντρο πλοήγησης που αρχίζει από το επίπεδο 1 σελίδα(ες) πλοήγησης. Όλα τα υπο-επίπεδα σελίδα επίπεδο 1 επεκτείνονται, συμπεριλαμβανομένων των υπο-επίπεδα αμφιθαλή. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Εμφανίζει ένα δέντρο πλοήγησης που αρχίζει από το επίπεδο 1 σελίδα(ες) πλοήγησης. Η γονική σελίδα εμφανίζεται ως τίτλος μενού πλοήγησης. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Εμφανίζει ένα δέντρο πλοήγησης που αρχίζει από το επίπεδο 2 σελίδα(ες) πλοήγησης. Η γονική σελίδα εμφανίζεται ως τίτλος μενού πλοήγησης. (Automatic Translation)
-portlet-display-template-description-nav-pills=Εμφανίζει ένα μενού πλοήγησης με χάπια Bootstrap πλοήγησης. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Εμφανίζει ένα μενού πλοήγησης με δικαιολογημένη Bootstrap πλοήγησης χάπια. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Εμφανίζει ένα μενού πλοήγησης με χάπια στοιβάζονται Bootstrap πλοήγησης. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Εμφανίζει ένα μενού περιήγησης με καρτέλες Bootstrap πλοήγηση. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Εμφανίζει ένα μενού πλοήγησης με δικαιολογημένη Bootstrap πλοήγησης καρτέλες. (Automatic Translation)
-portlet-display-template-description-navbar-default=Εμφανίζει ένα μενού πλοήγησης με μια γραμμή περιήγησης Bootstrap. (Automatic Translation)
+portlet-display-template-description-list-menu=Εμφανίζει ένα μενού πλοήγησης με μια λίστα. (Automatic Translation)
+portlet-display-template-description-nav-pills=Εμφανίζει ένα μενού πλοήγησης με στοιχεία πλοήγησης εμφανίζεται ως χάπια. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Εμφανίζει ένα μενού πλοήγησης με δικαιολογημένη πλοήγησης στοιχεία που εμφανίζονται ως χάπια. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Εμφανίζει ένα μενού πλοήγησης με αντικείμενα στοιβάζονται πλοήγησης εμφανίζεται ως χάπια. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Εμφανίζει ένα μενού πλοήγησης με στοιχεία πλοήγησης εμφανίζεται ως καρτέλες. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Εμφανίζει ένα μενού πλοήγησης με δικαιολογημένη πλοήγησης στοιχεία που εμφανίζονται ως καρτέλες. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Εμφανίζει ένα μενού πλοήγησης με μια γραμμή περιήγησης ελάχιστα στυλ. (Automatic Translation)
+portlet-display-template-description-navbar-default=Εμφανίζει ένα μενού πλοήγησης με ένα προεπιλεγμένο στυλ πλοήγησης μπαρ. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Περιέχει κοινή μακροεντολές για πρότυπα μενού πλοήγησης. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Εμφανίζει ένα ψίχουλο οριζόντια. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Εμφανίζει ένα αναπτυσσόμενο μενού πλοήγησης με Bootstrap κουμπιά. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Ελάχιστα στυλ Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Από το επίπεδο 0
-portlet-display-template-name-from-level-1=Από το επίπεδο 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Από το επίπεδο 1 για όλα τα υπο-επίπεδα (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Από το επίπεδο 1 με τίτλο
-portlet-display-template-name-from-level-2-with-title=Από το επίπεδο 2 με τίτλο
-portlet-display-template-name-nav-pills=Nav χάπια (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=Χάπια Nav δικαιολογείται (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=Χάπια Nav στοιβάζονται (Automatic Translation)
-portlet-display-template-name-nav-tabs=Nav καρτέλες (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=Nav καρτέλες που δικαιολογείται (Automatic Translation)
-portlet-display-template-name-navbar-default=Προεπιλογή NavBar (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Σχετικό με το breadcrumb
+portlet-display-template-description-split-button-dropdowns=Εμφανίζει ένα αναπτυσσόμενο μενού πλοήγησης με ρίζα στοιχεία μενού που εμφανίζονται ως κουμπιά. (Automatic Translation)
+portlet-display-template-name-list-menu=Μενού "Κατάλογος" (Automatic Translation)
+portlet-display-template-name-nav-pills=Οριζόντια χάπια (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Χάπια που δικαιολογείται (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Χάπια στοιβάζονται (Automatic Translation)
+portlet-display-template-name-nav-tabs=Καρτέλες (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Καρτέλες που δικαιολογείται (Automatic Translation)
+portlet-display-template-name-navbar-blank=Μπαρ στυλ ελάχιστα (Automatic Translation)
+portlet-display-template-name-navbar-default=Μπαρ προεπιλεγμένο στυλ (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Κοινή μακροεντολές πλοήγησης (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Αναπτυσσόμενα μενού κουμπί Σπλιτ (Automatic Translation)
 root-layout-level=Επίπεδο Σελίδας-ρίζας
 root-layout-level-help=Root Page Level (Automatic Copy)
