--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_fi.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Sisennetyt lapset
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Näyttää klassinen teema navigointivalikko. (Automatic Translation)
-portlet-display-template-description-custom=Näyttää mukautetun navigointi mallin. (Automatic Translation)
-portlet-display-template-description-from-level-0=Näyttää siirtymisrakenteen, alkaen 0-tason navigointi sivut. (Automatic Translation)
-portlet-display-template-description-from-level-1=Näyttää laivakulku puu alkaen tason 1 navigointi sivut. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Näyttää laivakulku puu alkaen tason 1 navigointi sivut. Kaikki tason 1 sivu alitasoja laajenevat, mukaan lukien sisarus alitasoja. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Näyttää laivakulku puu alkaen tason 1 navigointi sivut. Vanhemman sivu näkyy navigointivalikon otsikko. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Näyttää laivakulku puu alkaen tason 2 navigointi sivut. Vanhemman sivu näkyy navigointivalikon otsikko. (Automatic Translation)
-portlet-display-template-description-nav-pills=Näyttää navigointivalikko Bootstrap navigointi pillereitä. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Näyttää navigointivalikko perusteltuja Bootstrap navigointi pillereitä. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Näyttää navigointivalikko pinottu Bootstrap navigointi pillereitä. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Näyttää navigointivalikko Bootstrap navigointi välilehdet. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Näyttää navigointivalikko perusteltuja Bootstrap navigointi välilehdet. (Automatic Translation)
-portlet-display-template-description-navbar-default=Näyttää navigointivalikko Bootstrap siirtymispalkin. (Automatic Translation)
+portlet-display-template-description-list-menu=Näyttää navigointivalikko luettelo. (Automatic Translation)
+portlet-display-template-description-nav-pills=Näyttää navigointivalikko siirtymiskohteet näkyvät pillereitä. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Näyttää navigointivalikko perusteltuja siirtymiskohteet näkyvät pillereitä. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Näyttää navigointivalikko pinottu siirtymiskohteet näkyvät pillereitä. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Näyttää navigointivalikko siirtymiskohteet näkyvät välilehdet. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Näyttää navigointivalikko perusteltuja siirtymiskohteet näkyvät välilehdet. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Näyttää navigointivalikko minimaalisesti sisustetuissa siirtymispalkin. (Automatic Translation)
+portlet-display-template-description-navbar-default=Näyttää navigointivalikon avulla laiminlyöminen tyylistä laivakulku aisa. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Sisältää yhteisen makroja navigation menu malleja. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Näyttää vaihemerkki vaakasuunnassa. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Näyttää avattavan navigointivalikko Bootstrap painikkeilla. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimaalisesti sisustetuissa navigointipalkin (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Tasolta 0
-portlet-display-template-name-from-level-1=Tasolta 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Alaluokat tasolta 1 (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Tasolta 1 otsikolla
-portlet-display-template-name-from-level-2-with-title=Tasolta 2 otsikolla
-portlet-display-template-name-nav-pills=NAV pillereitä (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV pillereitä perusteltua (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV pillereitä pinottu (Automatic Translation)
-portlet-display-template-name-nav-tabs=NAV välilehdet (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV välilehdet perusteltua (Automatic Translation)
-portlet-display-template-name-navbar-default=Navigointipalkin oletus (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Suhteellinen murupolunkanssa
+portlet-display-template-description-split-button-dropdowns=Näyttää avattavan navigointivalikko root valikon JavaScript painikkeina. (Automatic Translation)
+portlet-display-template-name-list-menu=Valikko (Automatic Translation)
+portlet-display-template-name-nav-pills=Pillereitä vaaka (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Pillereitä perusteltua (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Pillereitä pinottu (Automatic Translation)
+portlet-display-template-name-nav-tabs=Välilehdet (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Välilehdet perusteltua (Automatic Translation)
+portlet-display-template-name-navbar-blank=Pelkistetty sisustus, Baari (Automatic Translation)
+portlet-display-template-name-navbar-default=Baari oletus tyylistä (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Navigointi yhteisen makrot (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split painiketta avattavasta valikosta haluamaasi (Automatic Translation)
 root-layout-level=Juurisivutaso
 root-layout-level-help=Root Page Level (Automatic Copy)
