--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_iw.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=ילדים מקוננים
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=מציג תפריט הניווט עבור ערכת הנושא הקלאסי. (Automatic Translation)
-portlet-display-template-description-custom=הצגת תבנית ניווט מותאם אישית. (Automatic Translation)
-portlet-display-template-description-from-level-0=הצגת עץ הניווט החל מהדף ניווט רמה 0. (Automatic Translation)
-portlet-display-template-description-from-level-1=הצגת עץ הניווט החל מעמודים הניווט רמה 1. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=הצגת עץ הניווט החל מעמודים הניווט רמה 1. כל רמות המשנה דף רמה 1 מורחבות, כולל אחים תת רמות. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=הצגת עץ הניווט החל מעמודים הניווט רמה 1. דף אב מוצג כותרתו הניווט. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=הצגת עץ הניווט החל מעמודים ניווט רמה 2. דף אב מוצג כותרתו הניווט. (Automatic Translation)
-portlet-display-template-description-nav-pills=מציג תפריט ניווט עם גלולות ניווט האתחול. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=מציג תפריט ניווט עם גלולות מוצדק ניווט האתחול. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=מציג תפריט ניווט עם גלולות מוערמים ניווט האתחול. (Automatic Translation)
-portlet-display-template-description-nav-tabs=הצגת תפריט ניווט עם כרטיסיות ניווט האתחול. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=הצגת תפריט ניווט עם כרטיסיות ניווט האתחול מוצדק. (Automatic Translation)
-portlet-display-template-description-navbar-default=הצגת תפריט ניווט עם סרגל ניווט האתחול. (Automatic Translation)
+portlet-display-template-description-list-menu=הצגת תפריט ניווט עם רשימה. (Automatic Translation)
+portlet-display-template-description-nav-pills=הצגת תפריט ניווט עם פריטי ניווט המוצג כמו גלולות. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=הצגת תפריט ניווט עם פריטי ניווט מוצדק שמוצג כמו גלולות. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=הצגת תפריט ניווט עם פריטי ניווט מוערם המוצגים כמו גלולות. (Automatic Translation)
+portlet-display-template-description-nav-tabs=הצגת תפריט ניווט עם פריטי ניווט המוצג כ כרטיסיות. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=הצגת תפריט ניווט עם פריטי ניווט מוצדק כמוצג כרטיסיות. (Automatic Translation)
+portlet-display-template-description-navbar-blank=הצגת תפריט ניווט עם סרגל ניווט מנוסח מינימלית. (Automatic Translation)
+portlet-display-template-description-navbar-default=הצגת תפריט ניווט עם סרגל ניווט מנוסח ברירת המחדל. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=מכיל פקודות מאקרו נפוצות עבור תבניות הניווט בתפריט. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=מציג את סימני הדרך אופקית. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=הצגת התפריט הנפתח ניווט עם כפתורים האתחול. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=בסרגל הניווט מנוסח מינימלית (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=מרמה 0
-portlet-display-template-name-from-level-1=מרמה 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=מרמה 1 כל תת רמות (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=מרמה 1 עם כותרת
-portlet-display-template-name-from-level-2-with-title=מרמה 2 עם כותרת
-portlet-display-template-name-nav-pills=גלולות Nav (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=גלולות Nav מוצדק (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=גלולות Nav מוערמים (Automatic Translation)
-portlet-display-template-name-nav-tabs=כרטיסיות ניווט (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=כרטיסיות ניווט מוצדק (Automatic Translation)
-portlet-display-template-name-navbar-default=בסרגל הניווט כברירת מחדל (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=יחסי עם ניווט היררכי
+portlet-display-template-description-split-button-dropdowns=הצגת התפריט הנפתח ניווט עם שורש פריטי תפריט המוצגות כלחצנים. (Automatic Translation)
+portlet-display-template-name-list-menu=רשימה תפריט (Automatic Translation)
+portlet-display-template-name-nav-pills=גלולות אופקי (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=גלולות מוצדק (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=גלולות מוערמים (Automatic Translation)
+portlet-display-template-name-nav-tabs=כרטיסיות (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=כרטיסיות מוצדק (Automatic Translation)
+portlet-display-template-name-navbar-blank=בר מינימלית מנוסח (Automatic Translation)
+portlet-display-template-name-navbar-default=בר ברירת המחדל מנוסח (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=פקודות מאקרו נפוצות ניווט (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Dropdowns לחצן פיצול (Automatic Translation)
 root-layout-level=רמת שורש דף
 root-layout-level-help=Root Page Level (Automatic Copy)
