--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_ja.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=ネストした子ページ
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=クラシック テーマのナビゲーション メニューが表示されます。 (Automatic Translation)
-portlet-display-template-description-custom=カスタム ナビゲーション テンプレートが表示されます。 (Automatic Translation)
-portlet-display-template-description-from-level-0=レベル 0 のナビゲーション ページからナビゲーション ツリーが表示されます。 (Automatic Translation)
-portlet-display-template-description-from-level-1=レベル 1 のナビゲーション ページからナビゲーション ツリーが表示されます。 (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=レベル 1 のナビゲーション ページからナビゲーション ツリーが表示されます。レベル 1 ページの下位レベルのすべてが展開、兄弟] サブオブジェクト レベルを含みます。 (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=レベル 1 のナビゲーション ページからナビゲーション ツリーが表示されます。親ページは、ナビゲーション メニューのタイトルとして表示されます。 (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=レベル 2 のナビゲーション ページからナビゲーション ツリーが表示されます。親ページは、ナビゲーション メニューのタイトルとして表示されます。 (Automatic Translation)
-portlet-display-template-description-nav-pills=ブートス トラップのナビゲーションの丸薬のナビゲーション メニューが表示されます。 (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=正当化されたブートス トラップ ・ ナビゲーションの丸薬のナビゲーション メニューが表示されます。 (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=積み上げブートス トラップ ナビゲーションの丸薬のナビゲーション メニューが表示されます。 (Automatic Translation)
-portlet-display-template-description-nav-tabs=ブートス トラップのナビゲーション タブのナビゲーション メニューが表示されます。 (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=正当化されたブートス トラップ ・ ナビゲーション ・ タブのナビゲーション メニューが表示されます。 (Automatic Translation)
-portlet-display-template-description-navbar-default=ブートス トラップのナビゲーション バーのナビゲーション メニューが表示されます。 (Automatic Translation)
+portlet-display-template-description-list-menu=リストのナビゲーション メニューが表示されます。 (Automatic Translation)
+portlet-display-template-description-nav-pills=薬としてのナビゲーション項目のナビゲーション メニューが表示されます。 (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=薬としての正当化されたナビゲーション項目のナビゲーション メニューが表示されます。 (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=薬としての積み上げのナビゲーション項目のナビゲーション メニューが表示されます。 (Automatic Translation)
+portlet-display-template-description-nav-tabs=タブとして表示されているナビゲーション項目をナビゲーション メニューが表示されます。 (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=タブとして正当化されたナビゲーション項目のナビゲーション メニューが表示されます。 (Automatic Translation)
+portlet-display-template-description-navbar-blank=最小限のスタイルのナビゲーション バーのナビゲーション メニューが表示されます。 (Automatic Translation)
+portlet-display-template-description-navbar-default=既定のスタイルのナビゲーション バーのナビゲーション メニューが表示されます。 (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=ナビゲーション メニュー テンプレートの一般的なマクロが含まれています。 (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=ブレッドクラムを水平方向に表示されます。 (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=ブートス トラップ ボタンとドロップダウンのナビゲーション メニューが表示されます。 (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=最小限のスタイルのナビゲーション バー (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=レベル0から
-portlet-display-template-name-from-level-1=レベル1から
-portlet-display-template-name-from-level-1-to-all-sub-levels=すべてのサブレベルにレベル 1 から (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=タイトルと一緒にレベル1から
-portlet-display-template-name-from-level-2-with-title=タイトルと一緒にレベル2から
-portlet-display-template-name-nav-pills=Nav の丸薬 (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=Nav の丸薬を正当化 (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=積み上げ Nav の丸薬 (Automatic Translation)
-portlet-display-template-name-nav-tabs=ナビゲーションバーのタブ (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=ナビゲーションバーのタブ揃え (Automatic Translation)
-portlet-display-template-name-navbar-default=ナビゲーション バーの既定 (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=パンくずリストからの相対パス
+portlet-display-template-description-split-button-dropdowns=ボタンとしてのルート メニュー項目のドロップダウン ナビゲーション メニューが表示されます。 (Automatic Translation)
+portlet-display-template-name-list-menu=リスト メニュー (Automatic Translation)
+portlet-display-template-name-nav-pills=丸薬水平 (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=正当化の丸薬 (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=積み上げの丸薬 (Automatic Translation)
+portlet-display-template-name-nav-tabs=タブ (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=正当化のタブ (Automatic Translation)
+portlet-display-template-name-navbar-blank=最小スタイルのバー (Automatic Translation)
+portlet-display-template-name-navbar-default=バーの既定のスタイル (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=ナビゲーションの一般的なマクロ (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=分割ボタン ドロップダウン (Automatic Translation)
 root-layout-level=ルートページレベル
 root-layout-level-help=Root Page Level (Automatic Copy)
