--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_nl_BE.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Geneste kinderen
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Een navigatiemenu voor de Classic-thema weergeven. (Automatic Translation)
-portlet-display-template-description-custom=Een aangepaste navigatie sjabloon weergegeven. (Automatic Translation)
-portlet-display-template-description-from-level-0=Hiermee geeft u weer een navigatiestructuur die begint vanuit de niveau 0 navigatie-pagina's. (Automatic Translation)
-portlet-display-template-description-from-level-1=Hiermee geeft u weer een navigatiestructuur die begint vanuit de niveau 1 navigatie-pagina's. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Hiermee geeft u weer een navigatiestructuur die begint vanuit de niveau 1 navigatie-pagina's. Alle van de subniveaus van niveau 1 pagina's uitgevouwen, met inbegrip van broer/zus subniveaus. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Hiermee geeft u weer een navigatiestructuur die begint vanuit de niveau 1 navigatie-pagina's. De bovenliggende pagina wordt weergegeven als de navigatiemenu titel. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Hiermee geeft u weer een navigatiestructuur die begint vanuit de niveau 2 navigatie-pagina's. De bovenliggende pagina wordt weergegeven als de navigatiemenu titel. (Automatic Translation)
-portlet-display-template-description-nav-pills=Een navigatiemenu met Bootstrap navigatie pillen weergeven. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Een navigatiemenu met gerechtvaardigde Bootstrap navigatie pillen weergeven. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Een navigatiemenu met gestapelde Bootstrap navigatie pillen weergeven. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Een navigatiemenu met Bootstrap navigatie tabbladen weergeven. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Een navigatiemenu met gerechtvaardigde Bootstrap navigatie tabbladen weergeven. (Automatic Translation)
-portlet-display-template-description-navbar-default=Een navigatiemenu met een Bootstrap navigatiebalk weergeven. (Automatic Translation)
+portlet-display-template-description-list-menu=Een navigatiemenu met een lijst weergeven. (Automatic Translation)
+portlet-display-template-description-nav-pills=Verschijnt een navigatiemenu met navigatie-items weergegeven als pillen. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Verschijnt een navigatiemenu met gerechtvaardigde navigatie-items weergegeven als pillen. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Verschijnt een navigatiemenu met gestapelde navigatie-items weergegeven als pillen. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Verschijnt een navigatiemenu met navigatie-items weergegeven als tabbladen. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Verschijnt een navigatiemenu met gerechtvaardigde navigatie-items weergegeven als tabbladen. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Een navigatiemenu met een minimaal gestileerde navigatiebalk weergeven. (Automatic Translation)
+portlet-display-template-description-navbar-default=Een navigatiemenu met een standaard opgemaakte navigatiebalk weergeven. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Gemeenschappelijke macro's voor navigatie menusjablonen bevat. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Een ' breadcrumb ' weergegeven horizontaal. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Wordt een dropdown menu aan Bootstrap knoppen weergegeven. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimaal gestileerde Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Van niveau 0
-portlet-display-template-name-from-level-1=Van niveau 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Variërend van niveau 1 naar alle subniveaus (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Van niveau 1 met titel
-portlet-display-template-name-from-level-2-with-title=Van niveau 2 met titel
-portlet-display-template-name-nav-pills=NAV pillen (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV pillen gerechtvaardigd (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV pillen gestapeld (Automatic Translation)
-portlet-display-template-name-nav-tabs=NAV Tabs (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV tabbladen gerechtvaardigd (Automatic Translation)
-portlet-display-template-name-navbar-default=Navbar standaard (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relatief met de breadcrumb
+portlet-display-template-description-split-button-dropdowns=Verschijnt een dropdown navigatiemenu met root menu-items weergegeven als knoppen. (Automatic Translation)
+portlet-display-template-name-list-menu=Lijstmenu (Automatic Translation)
+portlet-display-template-name-nav-pills=Pillen horizontaal (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Pillen gerechtvaardigd (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Pillen gestapeld (Automatic Translation)
+portlet-display-template-name-nav-tabs=Tabbladen (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Tabbladen gerechtvaardigd (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar stijl minimaal (Automatic Translation)
+portlet-display-template-name-navbar-default=Bar standaard stijl (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Navigatie gemeenschappelijk macro 's (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split knop Dropdowns (Automatic Translation)
 root-layout-level=Root paginaniveau (Automatic Translation)
 root-layout-level-help=Root Page Level (Automatic Copy)
