--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_sl.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Vgnezdeni podrejeni
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Prikaže menija za klasično temo. (Automatic Translation)
-portlet-display-template-description-custom=Prikaže predlogo po meri za krmarjenje. (Automatic Translation)
-portlet-display-template-description-from-level-0=Prikaže drevo za krmarjenje od ravni 0 navigacijo strani. (Automatic Translation)
-portlet-display-template-description-from-level-1=Prikaže drevo za krmarjenje od ravni 1 navigacijo strani. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Prikaže drevo za krmarjenje od ravni 1 navigacijo strani. Vse etaže strani ravni 1 so razširili, vključno z sorodstveni etaže. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Prikaže drevo za krmarjenje od ravni 1 navigacijo strani. Strani staršev je prikazano kot naslov navigacijski meni. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Prikaže drevo za krmarjenje od strani navigacije ravni 2. Strani staršev je prikazano kot naslov navigacijski meni. (Automatic Translation)
-portlet-display-template-description-nav-pills=Prikaže menija z Bootstrap navigacija tablete. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Prikaže menija z upravičeno Bootstrap navigacija tablete. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Prikaže meni navigacijo z naloženo navigacijo Bootstrap tablete. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Prikaže meni za krmarjenje z zavihki Bootstrap navigacijo. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Prikaže meni za krmarjenje z zavihki utemeljenih Bootstrap navigacijo. (Automatic Translation)
-portlet-display-template-description-navbar-default=Prikaže menija z Bootstrap navigacijski vrstici. (Automatic Translation)
+portlet-display-template-description-list-menu=Prikaže navigacijski meni s seznamom. (Automatic Translation)
+portlet-display-template-description-nav-pills=Prikaže navigacijski meni z navigacijo postavke, prikazane kot tablete. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Prikaže navigacijski meni z upravičeno navigacija elementi, prikazani kot tablete. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Prikaže meni navigacijo z naloženo navigacijo postavke, prikazane kot tablete. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Prikaže navigacijski meni z navigacija elementi, prikazani kot tabs. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Prikaže navigacijski meni z upravičeno navigacija elementi, prikazani kot tabs. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Prikaže menija z minimalno styled navigacijski vrstici. (Automatic Translation)
+portlet-display-template-description-navbar-default=Prikaže menija z ne izpolniti obveznosti zasova stil plovba, upravljanje letala. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Vsebuje skupno makre za navigacijo menu predloge. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Prikaže s sledenjem vodoravno. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Prikaže dropdown menija z Bootstrap gumbi. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimalno Styled Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=From Level 0 (Automatic Copy)
-portlet-display-template-name-from-level-1=From Level 1 (Automatic Copy)
-portlet-display-template-name-from-level-1-to-all-sub-levels=Iz stopnje 1 za vse etaže (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=From Level 1 with Title (Automatic Copy)
-portlet-display-template-name-from-level-2-with-title=From Level 2 with Title (Automatic Copy)
-portlet-display-template-name-nav-pills=Nav tablete (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=Nav tablete upravičeno (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=Nav tablete zložene (Automatic Translation)
-portlet-display-template-name-nav-tabs=Nav Tabs (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=Nav Tabs upravičeno (Automatic Translation)
-portlet-display-template-name-navbar-default=Privzeta vrstica za krmarjenje (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relative with Breadcrumb (Automatic Copy)
+portlet-display-template-description-split-button-dropdowns=Prikaže dropdown menija z root menija prikazane kot gumbi. (Automatic Translation)
+portlet-display-template-name-list-menu=Meni seznama (Automatic Translation)
+portlet-display-template-name-nav-pills=Tablete vodoravno (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Tablete upravičeno (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Tablete, ki so zložene (Automatic Translation)
+portlet-display-template-name-nav-tabs=Zavihki (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Zavihki, upravičeno (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar minimalno stil (Automatic Translation)
+portlet-display-template-name-navbar-default=Bar privzeto stil (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Skupno krmarjenje makre (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Razcep popek spustnem meniju (Automatic Translation)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
