--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_tr.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=İçiçe Çocuklar
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Klasik tema için bir navigasyon menüsü görüntüler. (Automatic Translation)
-portlet-display-template-description-custom=Özel gezinti şablonu görüntüler. (Automatic Translation)
-portlet-display-template-description-from-level-0=Düzey 0 gezinti sayfa (lar) başlayan navigasyon ağacını görüntüler. (Automatic Translation)
-portlet-display-template-description-from-level-1=Düzey 1 gezinti sayfa (lar) başlayan navigasyon ağacını görüntüler. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Düzey 1 gezinti sayfa (lar) başlayan navigasyon ağacını görüntüler. Tüm düzey 1 sayfa alt seviyeleri eşdüzey alt düzeyleri de dahil olmak üzere genişletilir. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Düzey 1 gezinti sayfa (lar) başlayan navigasyon ağacını görüntüler. Ana sayfayı Gezinti menüsünün başlık olarak görüntülenir. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Düzey 2 gezinti sayfa (lar) başlayan navigasyon ağacını görüntüler. Ana sayfayı Gezinti menüsünün başlık olarak görüntülenir. (Automatic Translation)
-portlet-display-template-description-nav-pills=Bootstrap gezinti haplarla bir navigasyon menüsü görüntüler. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Haklı Bootstrap gezinti haplarla bir navigasyon menüsü görüntüler. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Yığılmış Bootstrap gezinti haplarla bir navigasyon menüsü görüntüler. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Bootstrap navigasyon sekmeler içeren bir navigasyon menüsü görüntülenir. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Haklı Bootstrap navigasyon sekmeler içeren bir navigasyon menüsü görüntülenir. (Automatic Translation)
-portlet-display-template-description-navbar-default=Bootstrap gezinti çubuğu içeren bir navigasyon menüsü görüntülenir. (Automatic Translation)
+portlet-display-template-description-list-menu=Bir navigasyon menüsü ile bir liste görüntüler. (Automatic Translation)
+portlet-display-template-description-nav-pills=Bir navigasyon menüsü hap gösterilen gezinti öğelerini görüntüler. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Bir navigasyon menüsü hap gösterilen haklı gezinti öğelerini görüntüler. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Bir navigasyon menüsü hap gösterilen yığılmış gezinti öğelerini görüntüler. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Bir navigasyon menüsü sekmeleri gösterilen gezinti öğelerini görüntüler. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Bir navigasyon menüsü sekmeleri gösterilen haklı gezinti öğelerini görüntüler. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Minimal tasarımlı gezinti çubuğu içeren bir navigasyon menüsü görüntülenir. (Automatic Translation)
+portlet-display-template-description-navbar-default=Varsayılan stile sahip gezinti çubuğu içeren bir navigasyon menüsü görüntülenir. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Navigasyon menü şablonlar için ortak makro içeriyor. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Bir kırıntı yatay olarak görüntüler. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Bootstrap düğmeleri içeren bir açılan navigasyon menüsü görüntülenir. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimal tasarımlı gezinti çubuğu (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=From Level 0 (Automatic Copy)
-portlet-display-template-name-from-level-1=From Level 1 (Automatic Copy)
-portlet-display-template-name-from-level-1-to-all-sub-levels=Düzey 1 tüm alt seviyelere (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=From Level 1 with Title (Automatic Copy)
-portlet-display-template-name-from-level-2-with-title=From Level 2 with Title (Automatic Copy)
-portlet-display-template-name-nav-pills=Nav hapları (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=Haklı Nav hapları (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=Yığılmış Nav hapları (Automatic Translation)
-portlet-display-template-name-nav-tabs=Nav sekmeler (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=Haklı Nav sekmeler (Automatic Translation)
-portlet-display-template-name-navbar-default=Gezinti Çubuğu varsayılan (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relative with Breadcrumb (Automatic Copy)
+portlet-display-template-description-split-button-dropdowns=Düğmeler olarak gösterilen kök menü öğeleri ile açılan navigasyon menüsü görüntüler. (Automatic Translation)
+portlet-display-template-name-list-menu=Liste menüsü (Automatic Translation)
+portlet-display-template-name-nav-pills=Hapları yatay (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Haklı hapları (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Yığılmış hapları (Automatic Translation)
+portlet-display-template-name-nav-tabs=Sekmeleri (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Haklı sekmeleri (Automatic Translation)
+portlet-display-template-name-navbar-blank=Minimal tarz Bar (Automatic Translation)
+portlet-display-template-name-navbar-default=Varsayılan tarz (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Gezinti ortak makrolar (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split düğmesi açılır menülerde (Automatic Translation)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
