--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_ca.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Subpàgines imbricades
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Es mostra un menú de navegació del tema clàssic. (Automatic Translation)
-portlet-display-template-description-custom=Visualitza una plantilla de navegació personalitzada. (Automatic Translation)
-portlet-display-template-description-from-level-0=Mostra un arbre de navegació a partir de les pàgines de navegació de nivell 0. (Automatic Translation)
-portlet-display-template-description-from-level-1=Mostra un arbre de navegació a partir de les pàgines de navegació de nivell 1. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Mostra un arbre de navegació a partir de les pàgines de navegació de nivell 1. Tots els nivell 1 pàgina sub-nivells s'expandeixen, incloent el germà subnivells. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Mostra un arbre de navegació a partir de les pàgines de navegació de nivell 1. La pàgina principal es mostra com a títol del menú de navegació. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Mostra un arbre de navegació a partir de les pàgines de navegació de nivell 2. La pàgina principal es mostra com a títol del menú de navegació. (Automatic Translation)
-portlet-display-template-description-nav-pills=Es mostra un menú de navegació amb píndoles de navegació d'arrencada. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Es mostra un menú de navegació amb píndoles de navegació arrencada justificada. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Es mostra un menú de navegació amb píndoles de navegació arrencada apilada. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Es mostra un menú de navegació amb pestanyes de navegació d'arrencada. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Es mostra un menú de navegació amb pestanyes de navegació arrencada justificada. (Automatic Translation)
-portlet-display-template-description-navbar-default=Es mostra un menú de navegació amb una barra de navegació d'arrencada. (Automatic Translation)
+portlet-display-template-description-list-menu=Es mostra un menú de navegació amb una llista. (Automatic Translation)
+portlet-display-template-description-nav-pills=Es mostra un menú de navegació amb navegació articles mostrats com píndoles. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Es mostra un menú de navegació amb navegació justificada articles mostrats com píndoles. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Es mostra un menú de navegació amb navegació apilades articles mostrats com píndoles. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Es mostra un menú de navegació amb navegació articles mostrats com tabuladors. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Es mostra un menú de navegació amb navegació justificada articles mostrats com tabuladors. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Es mostra un menú de navegació amb una barra de navegació mínimament d'estil. (Automatic Translation)
+portlet-display-template-description-navbar-default=Es mostra un menú de navegació amb una barra de navegació d'estil per defecte. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Conté macros comuns per a plantilles de menú de navegació. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Visualitza un pa ratllat horitzontalment. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Es mostra un menú de navegació de menú desplegable amb botons d'arrencada. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Navbar mínimament d'estil (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Des del nivell 0
-portlet-display-template-name-from-level-1=Des del nivell 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=De nivell 1 a tots els sub-nivells de (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Des del nivell 1 amb títol
-portlet-display-template-name-from-level-2-with-title=Des del nivell 2 amb títol
-portlet-display-template-name-nav-pills=Píndoles de nav (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=Píndoles de nav justificades (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=Píndoles de nav apilats (Automatic Translation)
-portlet-display-template-name-nav-tabs=Pestanyes de navegació (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=Pestanyes de navegació justificades (Automatic Translation)
-portlet-display-template-name-navbar-default=Barra de navegació per defecte (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relacionat amb la ruta de navegació
+portlet-display-template-description-split-button-dropdowns=Es mostra un menú de navegació desplegable amb elements de menú d'arrel com botons. (Automatic Translation)
+portlet-display-template-name-list-menu=Menú de llista (Automatic Translation)
+portlet-display-template-name-nav-pills=Píndoles horitzontal (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Píndoles justificades (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Píndoles apilats (Automatic Translation)
+portlet-display-template-name-nav-tabs=Pestanyes (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Pestanyes justificades (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar d'estil mínimament (Automatic Translation)
+portlet-display-template-name-navbar-default=Barra per defecte d'estil (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Macros comuns de navegació (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split botó desplegables (Automatic Translation)
 root-layout-level=Nivell de la pàgina arrel
 root-layout-level-help=Root Page Level (Automatic Copy)
