--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_cs.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Zanoření potomci
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Zobrazí navigační menu pro klasický motiv. (Automatic Translation)
-portlet-display-template-description-custom=Zobrazí vlastní navigační šablonu. (Automatic Translation)
-portlet-display-template-description-from-level-0=Zobrazí navigační strom od úrovně 0 navigační stránky. (Automatic Translation)
-portlet-display-template-description-from-level-1=Zobrazí navigační strom od úrovně 1 navigační stránky. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Zobrazí navigační strom od úrovně 1 navigační stránky. Všechny úrovně 1 stránky podřízené úrovně jsou rozbaleny, včetně sourozenců podúrovní. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Zobrazí navigační strom od úrovně 1 navigační stránky. Nadřazená stránka se zobrazí jako název navigační nabídky. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Zobrazí navigační strom od úrovně 2 navigační stránky. Nadřazená stránka se zobrazí jako název navigační nabídky. (Automatic Translation)
-portlet-display-template-description-nav-pills=Zobrazí navigační menu s Bootstrap navigace prášky. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Zobrazí navigační menu s odůvodněných Bootstrap navigace prášky. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Zobrazí navigační menu s skládaný samozavádění navigace prášky. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Zobrazí navigační menu s Bootstrap navigační karty. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Zobrazí navigační menu s odůvodněných Bootstrap navigační karty. (Automatic Translation)
-portlet-display-template-description-navbar-default=Zobrazí navigační menu s Bootstrap navigační panel. (Automatic Translation)
+portlet-display-template-description-list-menu=Zobrazí navigační menu se seznamem. (Automatic Translation)
+portlet-display-template-description-nav-pills=Zobrazí navigační menu s navigační položky zobrazeny jako pilulky. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Zobrazí navigační menu s odůvodněných navigační položky zobrazeny jako pilulky. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Zobrazí navigační menu s skládaný navigační položky zobrazeny jako pilulky. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Zobrazí navigační menu s navigační položky zobrazeny jako karty. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Zobrazí navigační menu s odůvodněných navigační položky zobrazeny jako karty. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Zobrazí navigační menu s minimálně stylizovaný navigační panel. (Automatic Translation)
+portlet-display-template-description-navbar-default=Zobrazí navigační menu s výchozím stylem navigační panel. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Společné s makry pro navigační menu šablony. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Zobrazí cesty vodorovně. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Zobrazí rozbalovací menu navigace s Bootstrap tlačítky. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimálně stylizovaný navigační panel (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Od úrovně 0
-portlet-display-template-name-from-level-1=Od úrovně 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Z úrovně 1 na všechny podřízené úrovně (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Od úrovně 1 s názvem
-portlet-display-template-name-from-level-2-with-title=Od úrovně 2 s názvem
-portlet-display-template-name-nav-pills=NAV prášky (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV prášky oprávněné (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV prášky skládaný (Automatic Translation)
-portlet-display-template-name-nav-tabs=NAV karty (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV karty oprávněná (Automatic Translation)
-portlet-display-template-name-navbar-default=Výchozí navigační panel (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relativně k drobečkové navigaci
+portlet-display-template-description-split-button-dropdowns=Zobrazí rozbalovací menu navigační kořenové položky zobrazeny jako tlačítka. (Automatic Translation)
+portlet-display-template-name-list-menu=Seznam Menu (Automatic Translation)
+portlet-display-template-name-nav-pills=Prášky vodorovně (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Prášky na oprávněné (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Prášky na skládaný (Automatic Translation)
+portlet-display-template-name-nav-tabs=Tabulátory (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Karty oprávněná (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar minimálně stylizovaný (Automatic Translation)
+portlet-display-template-name-navbar-default=Panel výchozí stylem (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Společná navigace makra (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split tlačítka rozbalovacích (Automatic Translation)
 root-layout-level=Úroveň kořenové stránky
 root-layout-level-help=Root Page Level (Automatic Copy)
