--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_da.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_da.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Nested Children (Automatic Copy)
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Viser en navigationsmenu for temaet klassisk. (Automatic Translation)
-portlet-display-template-description-custom=Viser en brugerdefineret navigation skabelon. (Automatic Translation)
-portlet-display-template-description-from-level-0=Viser en navigationstræet startende fra niveau 0 navigation side(r). (Automatic Translation)
-portlet-display-template-description-from-level-1=Viser en navigationstræet startende fra niveau 1 navigation side(r). (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Viser en navigationstræet startende fra niveau 1 navigation side(r). Alle niveau 1 side underordnede niveauer er udvidet, herunder søskende underordnede niveauer. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Viser en navigationstræet startende fra niveau 1 navigation side(r). Den overordnede side vises som navigation Menutitel. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Viser en navigationstræet startende fra niveau 2 navigation side(r). Den overordnede side vises som navigation Menutitel. (Automatic Translation)
-portlet-display-template-description-nav-pills=Viser en navigationsmenu med Bootstrap navigation piller. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Viser en navigationsmenu med begrundede Bootstrap navigation piller. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Viser en navigationsmenu med stablet Bootstrap navigation piller. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Viser en navigationsmenu med Bootstrap Navigationsfaner. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Viser en navigationsmenu med begrundede Bootstrap Navigationsfaner. (Automatic Translation)
-portlet-display-template-description-navbar-default=Viser en navigationsmenu med en Bootstrap navigationslinje. (Automatic Translation)
+portlet-display-template-description-list-menu=Viser en navigationsmenu med en liste. (Automatic Translation)
+portlet-display-template-description-nav-pills=Viser en navigationsmenu med navigationselementer vist som piller. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Viser en navigationsmenu med begrundede navigationselementer vist som piller. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Viser en navigationsmenu med stablet navigationselementer vist som piller. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Viser en navigationsmenu med navigationselementer vist som faner. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Viser en navigationsmenu med begrundede navigationselementer vist som faner. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Viser en navigationsmenu med et minimalt stylet navigationslinje. (Automatic Translation)
+portlet-display-template-description-navbar-default=Viser en navigationsmenu med en standard stil navigation bar. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Indeholder fælles makroer for navigation menu skabeloner. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Viser en brødkrumme vandret. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Viser en dropdown navigationsmenu med Bootstrap knapper. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimalt stylet Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Fra niveau 0
-portlet-display-template-name-from-level-1=Fra niveau 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Fra niveau 1 til alle sub-niveauer (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Fra niveau 1 med titel
-portlet-display-template-name-from-level-2-with-title=Fra niveau 2 med titel
-portlet-display-template-name-nav-pills=NAV piller (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV piller berettiget (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV piller stablet (Automatic Translation)
-portlet-display-template-name-nav-tabs=NAV faner (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV faner berettiget (Automatic Translation)
-portlet-display-template-name-navbar-default=Navbar standard (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relative with Breadcrumb (Automatic Copy)
+portlet-display-template-description-split-button-dropdowns=Viser en dropdown navigationsmenu med root menupunkter vises som knapper. (Automatic Translation)
+portlet-display-template-name-list-menu=Liste Menu (Automatic Translation)
+portlet-display-template-name-nav-pills=Piller vandret (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Piller berettiget (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Piller stablet (Automatic Translation)
+portlet-display-template-name-nav-tabs=Faner (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Faner berettiget (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar stylet minimalt (Automatic Translation)
+portlet-display-template-name-navbar-default=Bar standard stylet (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Navigation fælles makroer (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split knap Dropdowns (Automatic Translation)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
