--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_es.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=subpáginas jerarquizadas
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Muestra un menú de navegación para el tema clásico. (Automatic Translation)
-portlet-display-template-description-custom=Muestra una plantilla de navegación personalizada. (Automatic Translation)
-portlet-display-template-description-from-level-0=Muestra un árbol de navegación a partir de la navegación nivel 0 página (s). (Automatic Translation)
-portlet-display-template-description-from-level-1=Muestra un árbol de navegación a partir de la navegación nivel 1 página (s). (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Muestra un árbol de navegación a partir de la navegación nivel 1 página (s). Se expanden todos los subniveles del nivel 1 página, incluyendo los sub-niveles hermano. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Muestra un árbol de navegación a partir de la navegación nivel 1 página (s). La Página principal se muestra como título del menú de navegación. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Muestra un árbol de navegación a partir de la navegación nivel 2 página (s). La Página principal se muestra como título del menú de navegación. (Automatic Translation)
-portlet-display-template-description-nav-pills=Muestra un menú de navegación con las píldoras de navegación Bootstrap. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Muestra un menú de navegación con las píldoras de navegación Bootstrap justificada. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Muestra un menú de navegación con pastillas apiladas navegación Bootstrap. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Muestra un menú de navegación con pestañas de navegación Bootstrap. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Muestra un menú de navegación con pestañas de navegación Bootstrap justificada. (Automatic Translation)
-portlet-display-template-description-navbar-default=Muestra un menú de navegación con una barra de navegación de Bootstrap. (Automatic Translation)
+portlet-display-template-description-list-menu=Muestra un menú de navegación con una lista. (Automatic Translation)
+portlet-display-template-description-nav-pills=Muestra un menú de navegación con elementos de navegación que se muestra como píldoras. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Muestra un menú de navegación con elementos de navegación justificada como píldoras. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Muestra un menú de navegación con elementos de navegación apiladas como las píldoras. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Muestra un menú de navegación con elementos de navegación que se muestran como fichas. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Muestra un menú de navegación con elementos de navegación justificada que se muestran como fichas. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Muestra un menú de navegación con una barra de navegación mínima con estilo. (Automatic Translation)
+portlet-display-template-description-navbar-default=Muestra un menú de navegación con una barra de navegación de estilo por defecto. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Contiene macros comunes para las plantillas de menú de navegación. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Muestra horizontalmente una migaja de pan. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Muestra un menú de navegación desplegable con botones de arranque. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Barra de navegación mínima con estilo (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Desde el nivel 0
-portlet-display-template-name-from-level-1=Desde el nivel 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Desde el nivel 1 a todos los sub-niveles (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Desde el nivel 1 con título
-portlet-display-template-name-from-level-2-with-title=Desde el nivel 2 con título
-portlet-display-template-name-nav-pills=Píldoras de NAV (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=Píldoras de NAV justificadas (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=Píldoras de NAV apiladas (Automatic Translation)
-portlet-display-template-name-nav-tabs=Pestañas de navegación (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV pestañas justificar (Automatic Translation)
-portlet-display-template-name-navbar-default=Por defecto de la barra de navegación (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relacionado con el camino de migas
+portlet-display-template-description-split-button-dropdowns=Muestra un menú de navegación desplegable con elementos de menú raíz que se muestra como botones. (Automatic Translation)
+portlet-display-template-name-list-menu=Menú de lista (Automatic Translation)
+portlet-display-template-name-nav-pills=Horizontal de las píldoras (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Píldoras justificadas (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Pastillas apiladas (Automatic Translation)
+portlet-display-template-name-nav-tabs=Fichas (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Pestañas justificar (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar estilo mínimamente (Automatic Translation)
+portlet-display-template-name-navbar-default=Por defecto la barra de estilo (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Macros comunes de navegación (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Menús desplegables de botón Split (Automatic Translation)
 root-layout-level=Nivel de página raíz
 root-layout-level-help=Root Page Level (Automatic Copy)
