--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_et.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Pesastatud alamlehed
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Kuvab klassikaline kujundus navigatsioonimenüü. (Automatic Translation)
-portlet-display-template-description-custom=Kuvab kohandatud navigeerimine malli. (Automatic Translation)
-portlet-display-template-description-from-level-0=Kuvab navigeerimine puu alates tasemel 0 navigeerimine leheküljed. (Automatic Translation)
-portlet-display-template-description-from-level-1=Kuvab navigeerimine puu alates tase 1 navigeerimine leheküljed. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Kuvab navigeerimine puu alates tase 1 navigeerimine leheküljed. Kõik tase 1 lehe alajaotustest laiendatakse, sealhulgas vend alajaotustest. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Kuvab navigeerimine puu alates tase 1 navigeerimine leheküljed. Vanem leht kuvatakse kujul navigeerimine menüü pealkiri. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Kuvab navigeerimine puu alates tase 2 navigeerimine leheküljed. Vanem leht kuvatakse kujul navigeerimine menüü pealkiri. (Automatic Translation)
-portlet-display-template-description-nav-pills=Kuvatakse navigatsiooni menüü Bootstrap navigeerimine pillid. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Kuvatakse navigatsiooni menüü põhjendatud Bootstrap navigeerimine pillid. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Kuvatakse navigatsiooni menüü laotud Bootstrap navigeerimine pillid. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Kuvatakse Bootstrap Navigeerimisvahekaartide navigatsiooni menüü. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Kuvatakse põhjendatud Bootstrap Navigeerimisvahekaartide navigatsiooni menüü. (Automatic Translation)
-portlet-display-template-description-navbar-default=Kuvatakse navigatsiooni menüü Bootstrap navigeerimisriba. (Automatic Translation)
+portlet-display-template-description-list-menu=Kuvab nimekirja navigatsioonimenüü. (Automatic Translation)
+portlet-display-template-description-nav-pills=Kuvab navigatsioonimenüü navigeerimisüksusi kui pillid. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Kuvab navigatsioonimenüü põhjendatud navigeerimisüksusi kui pillid. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Kuvab navigatsioonimenüü koos laotud navigeerimisüksusi kui pillid. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Kuvab navigatsioonimenüü navigeerimisüksused kujutatud vahekaarte. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Kuvab navigatsioonimenüü põhjendatud navigeerimisüksused kujutatud vahekaarte. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Kuvatakse navigatsiooni menüü minimaalselt stiilis navigeerimisriba. (Automatic Translation)
+portlet-display-template-description-navbar-default=Kuvatakse vaikimisi stiilis navigeerimisriba navigatsiooni menüü. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Sisaldab ühise makrosid navigatsiooni menüü malle. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=A lingirida kuvatakse horisontaalselt. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Kuvab ripploendi navigatsioonimenüü Bootstrap nupud. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimaalselt stiilis navriba (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=From Level 0 (Automatic Copy)
-portlet-display-template-name-from-level-1=From Level 1 (Automatic Copy)
-portlet-display-template-name-from-level-1-to-all-sub-levels=Kõikidest alajaotustest tasemelt 1 (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=From Level 1 with Title (Automatic Copy)
-portlet-display-template-name-from-level-2-with-title=From Level 2 with Title (Automatic Copy)
-portlet-display-template-name-nav-pills=Nav pillid (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=Nav pillid õigustatud (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=Nav pillid laotud (Automatic Translation)
-portlet-display-template-name-nav-tabs=Nav vahekaardid (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=Nav vahekaartide õigustatud (Automatic Translation)
-portlet-display-template-name-navbar-default=Navriba vaikimisi (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relative with Breadcrumb (Automatic Copy)
+portlet-display-template-description-split-button-dropdowns=Kuvab rippmenüüst navigation programmi nuppudena root käsud. (Automatic Translation)
+portlet-display-template-name-list-menu=Loendimenüüst (Automatic Translation)
+portlet-display-template-name-nav-pills=Pillid horisontaalne (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Põhjendatud pillid (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Laotud pillid (Automatic Translation)
+portlet-display-template-name-nav-tabs=Vahekaardid (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Vahekaartide õigustatud (Automatic Translation)
+portlet-display-template-name-navbar-blank=Minimaalselt stiilis Baar (Automatic Translation)
+portlet-display-template-name-navbar-default=Baar vaikimisi stiilis (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Navigeerimine ühise makrod (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split nupu rippmenüüst (Automatic Translation)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
