--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_fa.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=تو در تو
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=منوی ناوبری برای تم کلاسیک نمایش می دهد. (Automatic Translation)
-portlet-display-template-description-custom=الگوی ناوبری سفارشی را نمایش می دهد. (Automatic Translation)
-portlet-display-template-description-from-level-0=درخت جهت یابی با شروع از سطح 0 صفحه پیمایش را نمایش می دهد. (Automatic Translation)
-portlet-display-template-description-from-level-1=درخت جهت یابی با شروع از سطح 1 صفحه پیمایش را نمایش می دهد. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=درخت جهت یابی با شروع از سطح 1 صفحه پیمایش را نمایش می دهد. تمام سطح 1 سطح زیر صفحه، از جمله خواهر و برادر زیر سطح گسترش یافته است. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=درخت جهت یابی با شروع از سطح 1 صفحه پیمایش را نمایش می دهد. صفحه پدر و مادر به عنوان منوی ناوبری عنوان نمایش داده می شود. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=درخت جهت یابی با شروع از سطح 2 صفحه پیمایش را نمایش می دهد. صفحه پدر و مادر به عنوان منوی ناوبری عنوان نمایش داده می شود. (Automatic Translation)
-portlet-display-template-description-nav-pills=منو با قرص های ناوبری خود راه انداز را نمایش می دهد. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=نمایش منو با قرص های ناوبری خود راه انداز قابل توجیه است. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=منو با قرص های ناوبری خود راه انداز پشته ای را نمایش می دهد. (Automatic Translation)
-portlet-display-template-description-nav-tabs=منو با خود راه انداز پیمایش را نمایش می دهد. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=منو با توجیه خود راه انداز پیمایش را نمایش می دهد. (Automatic Translation)
-portlet-display-template-description-navbar-default=منو با نوار هدایت خود راه انداز را نمایش می دهد. (Automatic Translation)
+portlet-display-template-description-list-menu=منو با یک لیست نمایش می دهد. (Automatic Translation)
+portlet-display-template-description-nav-pills=نمایش منوی ناوبری با پیمایش آیتم به عنوان قرص های نشان داده شده. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=نمایش منوی ناوبری با موارد قابل توجیه ناوبری به عنوان قرص نشان داده. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=نمایش منوی ناوبری با موارد انباشته ناوبری به عنوان قرص نشان داده. (Automatic Translation)
+portlet-display-template-description-nav-tabs=نمایش منوی ناوبری با پیمایش آیتم به عنوان زبانه ها نشان داده است. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=نمایش منوی ناوبری با موارد قابل توجیه ناوبری به عنوان زبانه ها نشان داده. (Automatic Translation)
+portlet-display-template-description-navbar-blank=نمایش منو با نوار هدایت با حداقل مدل دهید. (Automatic Translation)
+portlet-display-template-description-navbar-default=منو با نوار هدایت مدل دهید پیش فرض را نشان می دهد. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=شامل ماکروهای مشترک برای ناوبری منو قالب است. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=خرده نان به صورت افقی نمایش می دهد. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=منو کشویی با دکمه های خود راه انداز را نمایش می دهد. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Navbar حداقل مدل دهید (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=از سطح 0
-portlet-display-template-name-from-level-1=از سطح 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=از سطح 1 به تمام سطوح زیر (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=از سطح ۱ به همراه عنوان
-portlet-display-template-name-from-level-2-with-title=از سطح ۲ با عنوان
-portlet-display-template-name-nav-pills=قرص های منو (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=قرص منو توجیه (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=قرص منو انباشته (Automatic Translation)
-portlet-display-template-name-nav-tabs=ناوبری زبانه ها (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=زبانه ها منو توجیه (Automatic Translation)
-portlet-display-template-name-navbar-default=پیش فرض Navbar (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=مرتبط با وب‌نما
+portlet-display-template-description-split-button-dropdowns=منو کشویی را با ریشه از آیتم های منو نشان داده شده به عنوان دکمه نمایش می دهد. (Automatic Translation)
+portlet-display-template-name-list-menu=لیست منو (Automatic Translation)
+portlet-display-template-name-nav-pills=قرص های افقی (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=قرص توجیه (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=قرص های انباشته (Automatic Translation)
+portlet-display-template-name-nav-tabs=زبانه ها (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=زبانه ها توجیه (Automatic Translation)
+portlet-display-template-name-navbar-blank=نوار حداقل مدل دهید (Automatic Translation)
+portlet-display-template-name-navbar-default=مدل دهید نوار پیش فرض (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=ناوبری مشترک ماکروها (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Dropdowns دکمه اسپلیت (Automatic Translation)
 root-layout-level=سطح صفحه اصلی
 root-layout-level-help=Root Page Level (Automatic Copy)
