--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_hi_IN.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=नेस्टेड चिल्ड्रेन
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=एक नेविगेशन मेनू क्लासिक के विषय के लिए प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-description-custom=एक कस्टम नेविगेशन टेम्पलेट को प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-description-from-level-0=0 स्तर नेविगेशन पृष्ठ (s) से शुरू एक नेविगेशन ट्री प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-description-from-level-1=1 स्तर नेविगेशन पृष्ठ (s) से शुरू एक नेविगेशन ट्री प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=1 स्तर नेविगेशन पृष्ठ (s) से शुरू एक नेविगेशन ट्री प्रदर्शित करता है। सभी स्तर 1 पृष्ठ उप स्तर, सहोदर उप स्तर सहित विस्तृत होते हैं। (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=1 स्तर नेविगेशन पृष्ठ (s) से शुरू एक नेविगेशन ट्री प्रदर्शित करता है। माता पिता के पृष्ठ नेविगेशन मेनू शीर्षक के रूप में प्रदर्शित किया जाता है। (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=2 स्तर नेविगेशन पृष्ठ (s) से शुरू एक नेविगेशन ट्री प्रदर्शित करता है। माता पिता के पृष्ठ नेविगेशन मेनू शीर्षक के रूप में प्रदर्शित किया जाता है। (Automatic Translation)
-portlet-display-template-description-nav-pills=बूटस्ट्रैप नेविगेशन गोलियों के साथ एक नेविगेशन मेनू को प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=एक नेविगेशन मेनू न्यायोचित बूटस्ट्रैप नेविगेशन गोलियों के साथ प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=स्टैक्ड बूटस्ट्रैप नेविगेशन गोलियों के साथ एक नेविगेशन मेनू को प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-description-nav-tabs=बूटस्ट्रैप नेविगेशन टैब्स के साथ एक नेविगेशन मेनू को प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=एक नेविगेशन मेनू न्यायोचित बूटस्ट्रैप नेविगेशन टैब्स के साथ प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-description-navbar-default=एक नेविगेशन मेनू एक Bootstrap नेविगेशन पट्टी के साथ प्रदर्शित करता है। (Automatic Translation)
+portlet-display-template-description-list-menu=एक नेविगेशन मेनू के साथ एक सूची प्रदर्शित करता है। (Automatic Translation)
+portlet-display-template-description-nav-pills=नेविगेशन आइटम्स गोलियों के रूप में दिखाया के साथ एक नेविगेशन मेनू प्रदर्शित करता है। (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=न्यायोचित नेविगेशन आइटम्स गोलियों के रूप में दिखाया के साथ एक नेविगेशन मेनू प्रदर्शित करता है। (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=स्टैक किए गए नेविगेशन आइटम्स गोलियों के रूप में दिखाया के साथ एक नेविगेशन मेनू प्रदर्शित करता है। (Automatic Translation)
+portlet-display-template-description-nav-tabs=एक नेविगेशन मेनू नेविगेशन टैब्स के रूप में दिखाई गई आइटम्स के साथ प्रदर्शित करता है। (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=न्यायोचित नेविगेशन आइटम्स टैब्स के रूप में दिखाया के साथ एक नेविगेशन मेनू प्रदर्शित करता है। (Automatic Translation)
+portlet-display-template-description-navbar-blank=एक न्यूनतम स्टाइल नेविगेशन पट्टी के साथ एक नेविगेशन मेनू को प्रदर्शित करता है। (Automatic Translation)
+portlet-display-template-description-navbar-default=एक नेविगेशन मेनू एक डिफ़ॉल्ट स्टाइल नेविगेशन पट्टी के साथ प्रदर्शित करता है। (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=नेविगेशन मेनू टेम्पलेट्स के लिए आम मैक्रोज़ हैं। (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=एक breadcrumb क्षैतिज रूप से प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=बूटस्ट्रैप बटनों के साथ एक ड्रॉपडाउन नेविगेशन मेनू को प्रदर्शित करता है। (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=न्यूनतम स्टाइल Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=स्तर 0 से (Automatic Translation)
-portlet-display-template-name-from-level-1=स्तर 1 से (Automatic Translation)
-portlet-display-template-name-from-level-1-to-all-sub-levels=स्तर 1 से सभी उप-स्तर के लिए (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=स्तर 1 से शीर्षक के साथ (Automatic Translation)
-portlet-display-template-name-from-level-2-with-title=से स्तर 2 शीर्षक के साथ (Automatic Translation)
-portlet-display-template-name-nav-pills=एनएवी की गोलियाँ (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=जायज़ एनएवी गोलियां (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=स्टैक्ड एनएवी गोलियां (Automatic Translation)
-portlet-display-template-name-nav-tabs=नेविगेशन टैब्स (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=जायज़ एनएवी टैब्स (Automatic Translation)
-portlet-display-template-name-navbar-default=Navbar डिफ़ॉल्ट (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=ब्रेडक्रम्ब साथ रिश्तेदार (Automatic Translation)
+portlet-display-template-description-split-button-dropdowns=रूट मेनू आइटम बटन के रूप में दिखाया के साथ एक ड्रॉपडाउन नेविगेशन मेनू प्रदर्शित करता है। (Automatic Translation)
+portlet-display-template-name-list-menu=सूची मेनू (Automatic Translation)
+portlet-display-template-name-nav-pills=गोलियां क्षैतिज (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=जायज़ गोलियां (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=स्टैक्ड गोलियां (Automatic Translation)
+portlet-display-template-name-nav-tabs=टैब्स (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=जायज़ टैब्स (Automatic Translation)
+portlet-display-template-name-navbar-blank=न्यूनतम स्टाइल पट्टी (Automatic Translation)
+portlet-display-template-name-navbar-default=पट्टी डिफ़ॉल्ट स्टाइल (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=नेविगेशन आम मैक्रोज़ (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=भाजित बटन Dropdowns (Automatic Translation)
 root-layout-level=पृष्ठ स्तर (Automatic Translation)
 root-layout-level-help=Root Page Level (Automatic Copy)
