--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_hu.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Beágyazott gyermekek
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Megjeleníti a navigációs menü, a klasszikus téma. (Automatic Translation)
-portlet-display-template-description-custom=Megjelenít egy egyedi navigációs sablon. (Automatic Translation)
-portlet-display-template-description-from-level-0=Megjeleníti a navigációs fában, kezdve a 0. szint navigációs lapokon. (Automatic Translation)
-portlet-display-template-description-from-level-1=A navigációs fán, kezdve az 1-es szint navigációs lapját jeleníti meg. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=A navigációs fán, kezdve az 1-es szint navigációs lapját jeleníti meg. Minden szint 1 oldal Al szinten bővülnek, beleértve a testvér Al szintek. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=A navigációs fán, kezdve az 1-es szint navigációs lapját jeleníti meg. A szülő lap címét a navigációs menü jelenik meg. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=A navigációs fán kezdve a level 2 navigációs lapját jeleníti meg. A szülő lap címét a navigációs menü jelenik meg. (Automatic Translation)
-portlet-display-template-description-nav-pills=A Bootstrap navigációs tabletták navigációs menü megjelenítése. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Megjelenik egy navigációs menü indokolt Bootstrap navigációs tabletták. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Megjelenik egy navigációs menü tablettákat halmozott Bootstrap navigációs. (Automatic Translation)
-portlet-display-template-description-nav-tabs=A Bootstrap navigációs lapok navigációs menü megjelenítése. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Megjelenik egy navigációs menü indokolt Bootstrap navigációs lapok. (Automatic Translation)
-portlet-display-template-description-navbar-default=A navigációs menü a Bootstrap navigációs sávot jelenít meg. (Automatic Translation)
+portlet-display-template-description-list-menu=A navigációs menü a listáját jeleníti meg. (Automatic Translation)
+portlet-display-template-description-nav-pills=Megjeleníti a navigációs menü navigációs elemek látható tabletták. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Sorkizárt navigációs elemek látható tabletták egy navigációs menüt jelenít meg. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Megjelenik egy navigációs menü kimutatni a tablettákat halmozott navigációs elemekkel. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Megjeleníti a navigációs menü jelenik meg lapok navigációs elemekkel. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Megjeleníti a navigációs menü sorkizárt navigációs elemek lapokat kimutatni. (Automatic Translation)
+portlet-display-template-description-navbar-blank=A navigációs menü a minimálisan stílusú navigációs sávot jelenít meg. (Automatic Translation)
+portlet-display-template-description-navbar-default=A navigációs menü az alapértelmezett stílusú navigációs sávot jelenít meg. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=A navigációs menü Sablonok közös makrókat tartalmaz. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Megjeleníti egy webhely vízszintesen. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Megjelenik egy legördülő navigációs menü Bootstrap gombokkal. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimálisan stílusú Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=A 0. szinttől
-portlet-display-template-name-from-level-1=Az 1. szinttől
-portlet-display-template-name-from-level-1-to-all-sub-levels=A szint 1-Al szintjéhez (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Az 1. szinttől címmel együtt
-portlet-display-template-name-from-level-2-with-title=A 2. szinttől címmel együtt
-portlet-display-template-name-nav-pills=NAV tabletták (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV tabletták indokolt (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV tablettákat halmozott (Automatic Translation)
-portlet-display-template-name-nav-tabs=NAV lapok (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV lapok indokolt (Automatic Translation)
-portlet-display-template-name-navbar-default=Alapértelmezett navbar (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relatív, útvonallal
+portlet-display-template-description-split-button-dropdowns=Megjeleníti egy lenyíló navigációs menü gyökér menüpontok gombok jelenik meg. (Automatic Translation)
+portlet-display-template-name-list-menu=Lista menü (Automatic Translation)
+portlet-display-template-name-nav-pills=Vízszintes tabletták (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Indokolt tabletták (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Rakott tabletták (Automatic Translation)
+portlet-display-template-name-nav-tabs=Lapok (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Indokolt lapok (Automatic Translation)
+portlet-display-template-name-navbar-blank=Minimálisan stílusú bárban (Automatic Translation)
+portlet-display-template-name-navbar-default=Bár az alapértelmezett stílusú (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Navigációs közös makrók (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Osztott gomb Dropdowns (Automatic Translation)
 root-layout-level=Gyökér oldal szint
 root-layout-level-help=Root Page Level (Automatic Copy)
