--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_lo.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=ເຄື່ອງຂ່າຍລູກ
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Displays a navigation menu for the Classic theme. (Automatic Copy)
-portlet-display-template-description-custom=Displays a custom navigation template. (Automatic Copy)
-portlet-display-template-description-from-level-0=Displays a navigation tree starting from the level 0 navigation page(s). (Automatic Copy)
-portlet-display-template-description-from-level-1=Displays a navigation tree starting from the level 1 navigation page(s). (Automatic Copy)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Displays a navigation tree starting from the level 1 navigation page(s). All of the level 1 page sub-levels are expanded, including sibling sub-levels. (Automatic Copy)
-portlet-display-template-description-from-level-1-with-title=Displays a navigation tree starting from the level 1 navigation page(s). The parent page is displayed as the navigation menu's title. (Automatic Copy)
-portlet-display-template-description-from-level-2-with-title=Displays a navigation tree starting from the level 2 navigation page(s). The parent page is displayed as the navigation menu's title. (Automatic Copy)
-portlet-display-template-description-nav-pills=Displays a navigation menu with Bootstrap navigation pills. (Automatic Copy)
-portlet-display-template-description-nav-pills-justified=Displays a navigation menu with justified Bootstrap navigation pills. (Automatic Copy)
-portlet-display-template-description-nav-pills-stacked=Displays a navigation menu with stacked Bootstrap navigation pills. (Automatic Copy)
-portlet-display-template-description-nav-tabs=Displays a navigation menu with Bootstrap navigation tabs. (Automatic Copy)
-portlet-display-template-description-nav-tabs-justified=Displays a navigation menu with justified Bootstrap navigation tabs. (Automatic Copy)
-portlet-display-template-description-navbar-default=Displays a navigation menu with a Bootstrap navigation bar. (Automatic Copy)
+portlet-display-template-description-list-menu=Displays a navigation menu with a list. (Automatic Copy)
+portlet-display-template-description-nav-pills=Displays a navigation menu with navigation items shown as pills. (Automatic Copy)
+portlet-display-template-description-nav-pills-justified=Displays a navigation menu with justified navigation items shown as pills. (Automatic Copy)
+portlet-display-template-description-nav-pills-stacked=Displays a navigation menu with stacked navigation items shown as pills. (Automatic Copy)
+portlet-display-template-description-nav-tabs=Displays a navigation menu with navigation items shown as tabs. (Automatic Copy)
+portlet-display-template-description-nav-tabs-justified=Displays a navigation menu with justified navigation items shown as tabs. (Automatic Copy)
+portlet-display-template-description-navbar-blank=Displays a navigation menu with a minimally styled navigation bar. (Automatic Copy)
+portlet-display-template-description-navbar-default=Displays a navigation menu with a default styled navigation bar. (Automatic Copy)
 portlet-display-template-description-navigation-menu-macro=Contains common macros for navigation menu templates. (Automatic Copy)
-portlet-display-template-description-relative-with-breadcrumb=Displays a breadcrumb horizontally. (Automatic Copy)
-portlet-display-template-description-split-button-dropdowns=Displays a dropdown navigation menu with Bootstrap buttons. (Automatic Copy)
-portlet-display-template-name-blank-navigation-menu=Minimally Styled Navbar (Automatic Copy)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=ຈາກລະດັບ 0
-portlet-display-template-name-from-level-1=ຈາກລະດັບ 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=From Level 1 to All Sub-Levels (Automatic Copy)
-portlet-display-template-name-from-level-1-with-title=ຈາກລະດັບ 1 ກັບຫົວຂໍ້
-portlet-display-template-name-from-level-2-with-title=ຈາກລະດັບ 2 ກັບຫົວຂໍ້
-portlet-display-template-name-nav-pills=Nav Pills (Automatic Copy)
-portlet-display-template-name-nav-pills-justified=Nav Pills Justified (Automatic Copy)
-portlet-display-template-name-nav-pills-stacked=Nav Pills Stacked (Automatic Copy)
-portlet-display-template-name-nav-tabs=Nav Tabs (Automatic Copy)
-portlet-display-template-name-nav-tabs-justified=Nav Tabs Justified (Automatic Copy)
-portlet-display-template-name-navbar-default=Navbar Default (Automatic Copy)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=ພົວພັນກັບບຣິດກຣູມບ໌
+portlet-display-template-description-split-button-dropdowns=Displays a dropdown navigation menu with root menu items shown as buttons. (Automatic Copy)
+portlet-display-template-name-list-menu=List Menu (Automatic Copy)
+portlet-display-template-name-nav-pills=Pills Horizontal (Automatic Copy)
+portlet-display-template-name-nav-pills-justified=Pills Justified (Automatic Copy)
+portlet-display-template-name-nav-pills-stacked=Pills Stacked (Automatic Copy)
+portlet-display-template-name-nav-tabs=Tabs (Automatic Copy)
+portlet-display-template-name-nav-tabs-justified=Tabs Justified (Automatic Copy)
+portlet-display-template-name-navbar-blank=Bar minimally styled (Automatic Copy)
+portlet-display-template-name-navbar-default=Bar default styled (Automatic Copy)
+portlet-display-template-name-navigation-menu-macro=Navigation common macros (Automatic Copy)
 portlet-display-template-name-split-button-dropdowns=Split Button Dropdowns (Automatic Copy)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
