--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_lt.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Nested Children (Automatic Copy)
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Rodomas navigacijos meniu, kad klasikinis tema. (Automatic Translation)
-portlet-display-template-description-custom=Rodo užsakymą navigacijos šabloną. (Automatic Translation)
-portlet-display-template-description-from-level-0=Rodoma nuo 0 lygis navigacijos puslapio navigaciją medį. (Automatic Translation)
-portlet-display-template-description-from-level-1=Rodoma nuo 1 lygio navigacijos puslapio navigaciją medis. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Rodoma nuo 1 lygio navigacijos puslapio navigaciją medis. Visi 1 lygio puslapis polygius išplėsti, įskaitant giminystės antriniai lygiai. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Rodoma nuo 1 lygio navigacijos puslapio navigaciją medis. Pagrindinį puslapį yra rodoma kaip navigacijos meniu pavadinimas. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Rodo nuo 2 lygio navigacijos puslapio navigaciją medį. Pagrindinį puslapį yra rodoma kaip navigacijos meniu pavadinimas. (Automatic Translation)
-portlet-display-template-description-nav-pills=Rodomas navigacijos meniu su įkrovos navigacijos tabletes. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Rodomas navigacijos meniu su pagrįstais įkrovos navigacijos tabletes. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Rodomas navigacijos meniu su sukrauti įkrovos navigacijos tabletes. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Rodomas navigacijos meniu su įkrovos naršymo tabuliatoriai. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Rodomas navigacijos meniu su pagrįstais įkrovos naršymo tabuliatoriai. (Automatic Translation)
-portlet-display-template-description-navbar-default=Rodomas navigacijos meniu su įkrovos meniu. (Automatic Translation)
+portlet-display-template-description-list-menu=Rodomas navigacijos meniu su sąrašu. (Automatic Translation)
+portlet-display-template-description-nav-pills=Rodomas navigacijos meniu su navigacijos elementais rodomas kaip tabletes. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Rodomas navigacijos meniu su pagrįstais naršymo elementus kaip tabletes. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Rodomas navigacijos meniu su sukrauti naršymo elementus kaip tabletes. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Rodomas navigacijos meniu su navigacijos elementais rodomas kaip skirtukų. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Rodomas navigacijos meniu su pagrįstais naršymo elementai rodomi kaip skirtukai. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Rodomas navigacijos meniu su minimaliai stiliaus naršymo juostą. (Automatic Translation)
+portlet-display-template-description-navbar-default=Rodomas navigacijos meniu su numatytasis stiliaus naršymo juostą. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Yra bendras makrokomandų navigacijos meniu šablonų. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Rodo breadcrumb horizontaliai. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Rodo navigacijos meniu su įkrovos mygtukus. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimaliai stiliaus naršymo juosta (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=From Level 0 (Automatic Copy)
-portlet-display-template-name-from-level-1=From Level 1 (Automatic Copy)
-portlet-display-template-name-from-level-1-to-all-sub-levels=Nuo 1 lygio iki visų subrangos lygiai (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=From Level 1 with Title (Automatic Copy)
-portlet-display-template-name-from-level-2-with-title=From Level 2 with Title (Automatic Copy)
-portlet-display-template-name-nav-pills=NAV tabletes (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV tabletes pateisinama (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV tabletes sukrauti (Automatic Translation)
-portlet-display-template-name-nav-tabs=NAV skirtukai (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV skirtukų pateisinama (Automatic Translation)
-portlet-display-template-name-navbar-default=Naršymo juosta numatytasis (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relative with Breadcrumb (Automatic Copy)
+portlet-display-template-description-split-button-dropdowns=Rodo navigacijos meniu su šaknies meniu elementai rodomi kaip mygtukai. (Automatic Translation)
+portlet-display-template-name-list-menu=Sąrašas meniu (Automatic Translation)
+portlet-display-template-name-nav-pills=Tabletes horizontalės (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Tabletes pateisinama (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Tabletes sukrauti (Automatic Translation)
+portlet-display-template-name-nav-tabs=Skirtukai (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Skirtukai pateisinama (Automatic Translation)
+portlet-display-template-name-navbar-blank=Minimaliai stiliaus baras (Automatic Translation)
+portlet-display-template-name-navbar-default=Baras numatytojo stiliaus (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Navigacijos bendro makrokomandas (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split mygtuką meniu (Automatic Translation)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
