--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_nb.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Nøstede-barn
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Viser en navigeringsmenyen for klassisk tema. (Automatic Translation)
-portlet-display-template-description-custom=Viser en egendefinert navigasjon mal. (Automatic Translation)
-portlet-display-template-description-from-level-0=Viser en navigasjonstreet fra nivå 0 navigasjon siden. (Automatic Translation)
-portlet-display-template-description-from-level-1=Viser en navigasjonstreet fra nivå 1 navigasjon siden. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Viser en navigasjonstreet fra nivå 1 navigasjon siden. Alle nivå 1 side sub nivåer er utvidet, inkludert søsken undernivåer. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Viser en navigasjonstreet fra nivå 1 navigasjon siden. Den overordnede siden vises som navigasjon menytittelen. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Viser en navigasjonstreet fra nivå 2 navigasjon siden. Den overordnede siden vises som navigasjon menytittelen. (Automatic Translation)
-portlet-display-template-description-nav-pills=Viser en navigeringsmeny med Bootstrap navigasjon piller. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Viser en navigeringsmeny med berettiget Bootstrap navigasjon piller. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Viser en navigeringsmeny med stablet Bootstrap navigasjon piller. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Viser en navigeringsmeny med Bootstrap navigation tabs. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Viser en navigeringsmeny med berettiget Bootstrap navigation tabs. (Automatic Translation)
-portlet-display-template-description-navbar-default=Viser en navigeringsmeny med Bootstrap navigasjonsfeltet. (Automatic Translation)
+portlet-display-template-description-list-menu=Viser en navigasjonsmeny med en liste. (Automatic Translation)
+portlet-display-template-description-nav-pills=Viser en navigeringsmeny med navigasjonselementer som piller. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Viser en navigeringsmeny med berettiget navigasjonselementer som piller. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Viser en navigeringsmeny med stablet navigasjonselementer som piller. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Viser en navigeringsmeny med navigeringselementer som vises som kategorier. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Viser en navigeringsmeny med berettiget navigeringselementer vises som kategorier. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Viser en navigeringsmeny med et minimalt stylet navigasjonsfelt. (Automatic Translation)
+portlet-display-template-description-navbar-default=Viser en navigeringsmeny med en standard stil navigasjon bar. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Inneholder vanlige makroer for navigasjon maler. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Viser en breadcrumb vannrett. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Viser en rullegardinmeny for navigering med Bootstrap knapper. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimal stylet Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Fra nivå 0
-portlet-display-template-name-from-level-1=Fra nivå 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Fra nivå 1 til alle sub-nivåer (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Fra nivå 1 inkludert tittel
-portlet-display-template-name-from-level-2-with-title=Fra nivå 2 inkludert tittel
-portlet-display-template-name-nav-pills=NAV piller (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV piller berettiget (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV piller stablet (Automatic Translation)
-portlet-display-template-name-nav-tabs=NAV faner (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV kategoriene berettiget (Automatic Translation)
-portlet-display-template-name-navbar-default=NavBar standard (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relativ med brødsmule
+portlet-display-template-description-split-button-dropdowns=Viser en rullegardinmeny for navigering med roten menyelementer som vises som knapper. (Automatic Translation)
+portlet-display-template-name-list-menu=Menyen (Automatic Translation)
+portlet-display-template-name-nav-pills=Piller vannrett (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Piller berettiget (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Piller stablet (Automatic Translation)
+portlet-display-template-name-nav-tabs=Faner (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Kategoriene berettiget (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar stil minimal (Automatic Translation)
+portlet-display-template-name-navbar-default=Bar standard stil (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Navigasjon felles makroer (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split knappen rullegardinlistene (Automatic Translation)
 root-layout-level=Rotsidenivå
 root-layout-level-help=Root Page Level (Automatic Copy)
