--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_pt_BR.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Descendente aninhado
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Exibe um menu de navegação para o tema clássico. (Automatic Translation)
-portlet-display-template-description-custom=Exibe um modelo de navegação personalizados. (Automatic Translation)
-portlet-display-template-description-from-level-0=Exibe uma árvore de navegação a partir da navegação de nível 0 página (s). (Automatic Translation)
-portlet-display-template-description-from-level-1=Exibe uma árvore de navegação a partir da navegação de nível 1 página (s). (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Exibe uma árvore de navegação a partir da navegação de nível 1 página (s). Todos os níveis de sub nível 1 página são expandidos, incluindo o irmão sub-níveis. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Exibe uma árvore de navegação a partir da navegação de nível 1 página (s). A página pai é exibida como o título do menu de navegação. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Exibe uma árvore de navegação a partir da navegação de nível 2 página (s). A página pai é exibida como o título do menu de navegação. (Automatic Translation)
-portlet-display-template-description-nav-pills=Exibe um menu de navegação com comprimidos de navegação Bootstrap. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Exibe um menu de navegação com comprimidos de navegação Bootstrap justificado. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Exibe um menu de navegação com comprimidos de navegação Bootstrap empilhados. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Exibe um menu de navegação com guias de navegação Bootstrap. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Exibe um menu de navegação com guias de navegação Bootstrap justificado. (Automatic Translation)
-portlet-display-template-description-navbar-default=Exibe um menu de navegação com uma barra de navegação de Bootstrap. (Automatic Translation)
+portlet-display-template-description-list-menu=Exibe um menu de navegação com uma lista. (Automatic Translation)
+portlet-display-template-description-nav-pills=Exibe um menu de navegação com itens de navegação mostrados como pílulas. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Exibe um menu de navegação com itens de navegação justificado apresentados como comprimidos. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Exibe um menu de navegação com navegação empilhados itens mostrados como pílulas. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Exibe um menu de navegação com itens de navegação mostrados como guias. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Exibe um menu de navegação com navegação justificado itens mostrados como guias. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Exibe um menu de navegação com uma barra de navegação minimamente com estilo. (Automatic Translation)
+portlet-display-template-description-navbar-default=Exibe um menu de navegação com uma barra de navegação de estilo padrão. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Contém macros comuns para modelos de menu de navegação. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Exibe um breadcrumb horizontalmente. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Exibe um menu de navegação com botões de Bootstrap. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimamente estilo Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Do nível 0
-portlet-display-template-name-from-level-1=Do nível 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Do nível 1 para todos os níveis de sub (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Do nível 1 com título
-portlet-display-template-name-from-level-2-with-title=Do nível 2 com título
-portlet-display-template-name-nav-pills=Pílulas de NAV (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=Pílulas de NAV justificadas (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=Pílulas de NAV empilhadas (Automatic Translation)
-portlet-display-template-name-nav-tabs=Navegação por abas (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=Navegação por abas justificadas (Automatic Translation)
-portlet-display-template-name-navbar-default=Barra de navegação padrão (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relativo ao breadcrumb
+portlet-display-template-description-split-button-dropdowns=Exibe um menu de navegação com itens de menu de raiz mostrados como botões. (Automatic Translation)
+portlet-display-template-name-list-menu=Menu de lista (Automatic Translation)
+portlet-display-template-name-nav-pills=Horizontal de comprimidos (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Pílulas que se justifica (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Comprimidos empilhados (Automatic Translation)
+portlet-display-template-name-nav-tabs=Guias (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Guias justificadas (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar minimamente decorado (Automatic Translation)
+portlet-display-template-name-navbar-default=Barra padrão com estilo (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Macros de navegação comuns (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Menus suspensos de botão de divisão (Automatic Translation)
 root-layout-level=Nível de pagina raiz
 root-layout-level-help=Root Page Level (Automatic Copy)
