--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_ro.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Copii Asezati
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Afişează un meniu de navigare pentru tema clasic. (Automatic Translation)
-portlet-display-template-description-custom=Afişează un şablon de navigare personalizat. (Automatic Translation)
-portlet-display-template-description-from-level-0=Afişează un copac de navigare, pornind de la nivelul 0 navigare pagini. (Automatic Translation)
-portlet-display-template-description-from-level-1=Afişează un copac de navigare, pornind de la paginile de navigare de nivel 1. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Afişează un copac de navigare, pornind de la paginile de navigare de nivel 1. Toate sub-nivelurile nivel 1 filme sunt extinse, inclusiv sub-nivelurile de frate. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Afişează un copac de navigare, pornind de la paginile de navigare de nivel 1. Pagina părinte este afişat ca meniul de navigare pe titlu. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Afişează un copac de navigare, pornind de la paginile de navigare de nivel 2. Pagina părinte este afişat ca meniul de navigare pe titlu. (Automatic Translation)
-portlet-display-template-description-nav-pills=Afişează un meniu de navigare cu pastile de navigare Bootstrap. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Afişează un meniu de navigare cu pastile de navigare Bootstrap justificate. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Afişează un meniu de navigare cu stivuite navigare Bootstrap pastile. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Afişează un meniu de navigare cu file de navigare Bootstrap. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Afişează un meniu de navigare cu file de navigare Bootstrap justificate. (Automatic Translation)
-portlet-display-template-description-navbar-default=Afişează un meniu de navigare cu o bară de navigare Bootstrap. (Automatic Translation)
+portlet-display-template-description-list-menu=Afişează un meniu de navigare cu o listă. (Automatic Translation)
+portlet-display-template-description-nav-pills=Afişează un meniu de navigare cu elemente de navigare ca pastile. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Afişează un meniu de navigare cu elemente de navigare justificate prezentate ca pastile. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Afişează un meniu de navigare cu elemente de navigare aranjate ca pastile. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Afişează un meniu de navigare cu elemente de navigare ca file. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Afişează un meniu de navigare cu elemente de navigare justificate prezentate ca file. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Afişează un meniu de navigare cu o bară de navigare minim de stil. (Automatic Translation)
+portlet-display-template-description-navbar-default=Afişează un meniu de navigare cu o bară de navigare stil implicit. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Conține macrocomenzi comune pentru navigare meniul şabloane. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Afişează un breadcrumb orizontal. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Afişează un meniu de navigare vertical cu butoane de Bootstrap. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Bara de navigare minim stil (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=De la Nivelul 0
-portlet-display-template-name-from-level-1=De la Nivelul 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=La nivelul 1 la toate sub-nivelurile de (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=De la Nivelul 1 cu Titlul
-portlet-display-template-name-from-level-2-with-title=De la Nivelul 2 cu Titlul
-portlet-display-template-name-nav-pills=NAV pastile (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV pastile justificate (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV pastile stivuite (Automatic Translation)
-portlet-display-template-name-nav-tabs=NAV file (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV file justificate (Automatic Translation)
-portlet-display-template-name-navbar-default=Navbar implicit (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Inrudit cu Cale Site
+portlet-display-template-description-split-button-dropdowns=Afişează un meniu de navigare vertical cu rădăcină elementele de meniu afişate ca butoane. (Automatic Translation)
+portlet-display-template-name-list-menu=Listă meniu (Automatic Translation)
+portlet-display-template-name-nav-pills=Pastile orizontală (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Pastile justificate (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Pastile stivuite (Automatic Translation)
+portlet-display-template-name-nav-tabs=File (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Filele justificate (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar stil minimal (Automatic Translation)
+portlet-display-template-name-navbar-default=Barul implicit stil (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Navigare comună macrocomenzi (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split butonul meniurile verticale (Automatic Translation)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
