--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_ru.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Вложенные дети
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Отображает меню навигации для классической теме. (Automatic Translation)
-portlet-display-template-description-custom=Отображает пользовательский шаблон навигации. (Automatic Translation)
-portlet-display-template-description-from-level-0=Отображает дерево навигации, начиная от уровня 0 страницах навигации. (Automatic Translation)
-portlet-display-template-description-from-level-1=Отображает дерево навигации, начиная с уровня 1 страницах навигации. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Отображает дерево навигации, начиная с уровня 1 страницах навигации. Все подуровни уровня 1 страница расширяются, включая брата подуровней. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Отображает дерево навигации, начиная с уровня 1 страницах навигации. Родительская страница отображается как заголовок меню навигации. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Отображает дерево навигации, начиная с уровня 2 страницах навигации. Родительская страница отображается как заголовок меню навигации. (Automatic Translation)
-portlet-display-template-description-nav-pills=Отображает меню навигации с начальной загрузки навигации таблетки. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Отображает меню навигации с оправданной Bootstrap навигации таблетки. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Отображает меню навигации с накоплением Bootstrap навигации таблетки. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Отображает меню навигации с начальной загрузки навигации вкладок. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Отображает меню навигации с оправданной Bootstrap навигации вкладок. (Automatic Translation)
-portlet-display-template-description-navbar-default=Отображает меню навигации с начальной загрузки навигации. (Automatic Translation)
+portlet-display-template-description-list-menu=Отображает меню навигации со списком. (Automatic Translation)
+portlet-display-template-description-nav-pills=Отображает меню навигации с элементами навигации, как таблетки. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Отображает меню навигации с элементами оправданным навигации, как таблетки. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Отображает меню навигации с накоплением навигации, отображаемых как таблетки. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Отображает меню навигации с элементами навигации, как вкладки. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Отображает меню навигации с оправданной навигации, отображаемых как вкладки. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Отображает меню навигации с минимально стиле навигации. (Automatic Translation)
+portlet-display-template-description-navbar-default=Отображает меню навигации с стиле навигации по умолчанию. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Содержит общие макросы для шаблонов меню навигации. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Отображает цепочку по горизонтали. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Отображение раскрывающегося меню навигации с начальной загрузки кнопками. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Минимально стиле Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=С уровня 0
-portlet-display-template-name-from-level-1=С уровня 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=От уровня 1 до всех подуровнях (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=С уровня 1 с заголовком
-portlet-display-template-name-from-level-2-with-title=С уровня 2 с заголовком
-portlet-display-template-name-nav-pills=NAV таблетки (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV таблетки оправдано (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV таблетки с накоплением (Automatic Translation)
-portlet-display-template-name-nav-tabs=Вкладки навигации (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=NAV вкладки оправдано (Automatic Translation)
-portlet-display-template-name-navbar-default=Панели навигации по умолчанию (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Относительно c Breadcrumb
+portlet-display-template-description-split-button-dropdowns=Отображение раскрывающегося меню навигации с корневых элементов меню показано как кнопки. (Automatic Translation)
+portlet-display-template-name-list-menu=Список меню (Automatic Translation)
+portlet-display-template-name-nav-pills=Таблетки по горизонтали (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Таблетки оправдано (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Укладываются таблетки (Automatic Translation)
+portlet-display-template-name-nav-tabs=Вкладки (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Вкладки оправдано (Automatic Translation)
+portlet-display-template-name-navbar-blank=Минимально стиле бар (Automatic Translation)
+portlet-display-template-name-navbar-default=Бар по умолчанию стиле (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Общие Макросы навигации (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Выпадающее меню кнопку Сплит (Automatic Translation)
 root-layout-level=Корневой уровень страниц
 root-layout-level-help=Root Page Level (Automatic Copy)
