--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_sk.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Vnorení potomkovia
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Zobrazuje navigačné menu pre klasický motív. (Automatic Translation)
-portlet-display-template-description-custom=Zobrazuje vlastné navigačné šablóny. (Automatic Translation)
-portlet-display-template-description-from-level-0=Zobrazuje Navigačný strom od úrovne 0 navigácie strany. (Automatic Translation)
-portlet-display-template-description-from-level-1=Zobrazuje Navigačný strom od úrovne 1 navigácie strany. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Zobrazuje Navigačný strom od úrovne 1 navigácie strany. Všetky úrovne 1 stránka sub-úrovne sú rozšírené, vrátane súrodenec archivácie. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Zobrazuje Navigačný strom od úrovne 1 navigácie strany. Nadradená stránka je zobrazená ako navigačné menu titulu. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Zobrazuje Navigačný strom od úrovne 2 navigácie strany. Nadradená stránka je zobrazená ako navigačné menu titulu. (Automatic Translation)
-portlet-display-template-description-nav-pills=Zobrazuje navigačné menu s Bootstrap navigácia pilulky. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Zobrazuje navigačné menu s odôvodnených Bootstrap navigácia pilulky. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Zobrazuje navigačné menu s skladaný Bootstrap navigácia pilulky. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Zobrazuje navigačné menu s Bootstrap navigačné karty. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Zobrazuje navigačné menu s odôvodnených Bootstrap navigačné karty. (Automatic Translation)
-portlet-display-template-description-navbar-default=Zobrazuje navigačné menu s Bootstrap navigačný panel. (Automatic Translation)
+portlet-display-template-description-list-menu=Zobrazuje navigačné menu so zoznamom. (Automatic Translation)
+portlet-display-template-description-nav-pills=Navigačné menu sa zobrazí s navigačné položky zobrazené ako pilulky. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Navigačné menu sa zobrazí s odôvodnených navigačné položky zobrazené ako pilulky. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Navigačné menu sa zobrazí s skladaný navigačné položky zobrazené ako pilulky. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Navigačné menu sa zobrazí s navigačné položky zobrazené ako záložky. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Navigačné menu sa zobrazí s odôvodnených navigačné položky zobrazené ako záložky. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Zobrazuje navigačné menu s minimálne štylizované navigačný panel. (Automatic Translation)
+portlet-display-template-description-navbar-default=Zobrazuje navigačné menu s predvoleného štýlu navigačný panel. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Obsahuje spoločné makrá pre navigačné menu šablóny. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Strúhanka sa zobrazí vodorovne. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Zobrazí rozbaľovacie menu navigácie Bootstrap tlačidlami. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimálne štylizované navigačnej lišty (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Od úrovne 0
-portlet-display-template-name-from-level-1=Od úrovne 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Z úrovne 1 na všetky sub-cholesterolu (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Od úrovne 1 s názvom
-portlet-display-template-name-from-level-2-with-title=Od úrovne 2 s názvom
-portlet-display-template-name-nav-pills=NAV pilulky (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=NAV pilulky odôvodnené (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=NAV pilulky skladaný (Automatic Translation)
-portlet-display-template-name-nav-tabs=Navigačné karty (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=Navigačné karty odôvodnené (Automatic Translation)
-portlet-display-template-name-navbar-default=Predvolený navigačný panel (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relatívne s omrvinkovou navigáciou
+portlet-display-template-description-split-button-dropdowns=Zobrazí rozbaľovacie menu navigácia s koreňové položky zobrazia ako tlačidlá. (Automatic Translation)
+portlet-display-template-name-list-menu=Zoznam Menu (Automatic Translation)
+portlet-display-template-name-nav-pills=Pilulky horizontálne (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Pilulky odôvodnené (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Pilulky skladaný (Automatic Translation)
+portlet-display-template-name-nav-tabs=Karty (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Karty, ktoré sú oprávnené (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar je štylizovaný minimálne (Automatic Translation)
+portlet-display-template-name-navbar-default=Bar predvoleného štýlu (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Spoločná navigácia makrá (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split tlačidlo rozbaľovacích (Automatic Translation)
 root-layout-level=Koreňová úroveň stránok
 root-layout-level-help=Root Page Level (Automatic Copy)
