--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_sv.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Underliggande strukturer
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Visar en navigeringsmeny för det klassiska temat. (Automatic Translation)
-portlet-display-template-description-custom=Visar en anpassad navigering mall. (Automatic Translation)
-portlet-display-template-description-from-level-0=Visar ett navigeringsträd start från nivå 0 navigering sida/sidor. (Automatic Translation)
-portlet-display-template-description-from-level-1=Visar ett navigeringsträd start från nivå 1 navigering sida/sidor. (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Visar ett navigeringsträd start från nivå 1 navigering sida/sidor. Alla undernivåer nivå 1 sida byggs ut, inklusive syskon undernivåer. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Visar ett navigeringsträd start från nivå 1 navigering sida/sidor. Den överordnade sidan visas som navigering-menyn titel. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Visar ett navigeringsträd start från nivå 2 navigering sida/sidor. Den överordnade sidan visas som navigering-menyn titel. (Automatic Translation)
-portlet-display-template-description-nav-pills=Visar en navigeringsmeny med Bootstrap navigering piller. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Visar en navigeringsmeny med motiverade Bootstrap navigering piller. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Visar en navigeringsmeny med staplade Bootstrap navigering piller. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Visar en navigeringsmeny med Bootstrap navigeringsflikar. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Visar en navigeringsmeny med motiverade Bootstrap navigeringsflikar. (Automatic Translation)
-portlet-display-template-description-navbar-default=Visar en navigeringsmeny med ett Bootstrap navigeringsfält. (Automatic Translation)
+portlet-display-template-description-list-menu=Visar en navigeringsmeny med en lista. (Automatic Translation)
+portlet-display-template-description-nav-pills=Visar en navigeringsmeny med navigering poster visas som piller. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Visar en navigeringsmeny med motiverade navigering poster visas som piller. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Visar en navigeringsmeny med staplade navigering poster visas som piller. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Visar en navigeringsmeny med navigering poster visas som flikar. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Visar en navigeringsmeny med motiverade navigering poster visas som flikar. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Visar en navigeringsmeny med ett minimalt stylad navigeringsfält. (Automatic Translation)
+portlet-display-template-description-navbar-default=Visar en navigeringsmeny med standard stil navigation bar. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Innehåller gemensamma makron för navigering-menyn mallar. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Visar en breadcrumb horisontellt. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Visar en navigeringsmeny med Bootstrap knappar. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Minimalt stylad Navbar (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=Från nivå 0
-portlet-display-template-name-from-level-1=Från nivå 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=Från nivå 1 till alla undernivåer (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=Från nivå 1 med titel
-portlet-display-template-name-from-level-2-with-title=Från nivå 2 med titel
-portlet-display-template-name-nav-pills=Nav piller (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=Nav piller motiverat (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=Nav piller staplade (Automatic Translation)
-portlet-display-template-name-nav-tabs=Nav flikar (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=Nav flikar motiverat (Automatic Translation)
-portlet-display-template-name-navbar-default=Navbar standard (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relative with Breadcrumb (Automatic Copy)
+portlet-display-template-description-split-button-dropdowns=Visar en navigeringsmeny med roten menyalternativ visas som knappar. (Automatic Translation)
+portlet-display-template-name-list-menu=Lista-menyn (Automatic Translation)
+portlet-display-template-name-nav-pills=Piller horisontell (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Piller motiverat (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Piller staplade (Automatic Translation)
+portlet-display-template-name-nav-tabs=Flikar (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Flikar motiverat (Automatic Translation)
+portlet-display-template-name-navbar-blank=Bar stylad minimalt (Automatic Translation)
+portlet-display-template-name-navbar-default=Bar standard stil (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Navigering gemensamma makron (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Split knappen menyerna (Automatic Translation)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
