--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_uk.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=Вкладені сторінки-потомки
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=Відображення меню навігації для в класичній темі. (Automatic Translation)
-portlet-display-template-description-custom=Відображає шаблону користувача навігації. (Automatic Translation)
-portlet-display-template-description-from-level-0=Відображає дерево навігації, починаючи з рівня 0 навігації сторінці (ах). (Automatic Translation)
-portlet-display-template-description-from-level-1=Відображає дерево навігації, починаючи з рівня 1 навігації сторінці (ах). (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=Відображає дерево навігації, починаючи з рівня 1 навігації сторінці (ах). Всі рівні 1 сторінка підрівнів було розширено, включаючи братів і сестер підрівнів. (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=Відображає дерево навігації, починаючи з рівня 1 навігації сторінці (ах). Батьківської сторінки відображається як заголовок меню навігації. (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=Відображає дерево навігації, починаючи з рівня 2 навігації сторінці (ах). Батьківської сторінки відображається як заголовок меню навігації. (Automatic Translation)
-portlet-display-template-description-nav-pills=Відображення меню навігації з Bootstrap навігації таблетки. (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=Відображення меню навігації з виправданої Bootstrap навігації таблетки. (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=Відображення меню навігації з накопиченням Bootstrap навігації таблетки. (Automatic Translation)
-portlet-display-template-description-nav-tabs=Відображення меню навігації з вкладками Bootstrap навігації. (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=Відображення меню навігації з вкладками вирівняному Bootstrap навігації. (Automatic Translation)
-portlet-display-template-description-navbar-default=Відображення меню навігації з Bootstrap навігаційній панелі. (Automatic Translation)
+portlet-display-template-description-list-menu=Відображає навігаційне меню зі списком. (Automatic Translation)
+portlet-display-template-description-nav-pills=Відображення меню навігації з елементами навігації відображається як таблетки. (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=Відображення меню навігації з елементами вирівняному навігації відображається як таблетки. (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=Відображення меню навігації з елементами з накопиченням навігації відображається як таблетки. (Automatic Translation)
+portlet-display-template-description-nav-tabs=Відображення меню навігації з елементами навігації відображається як вкладки. (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=Відображення меню навігації з елементами вирівняному навігації відображається як вкладки. (Automatic Translation)
+portlet-display-template-description-navbar-blank=Відображення меню навігації з мінімально стилі навігаційній панелі. (Automatic Translation)
+portlet-display-template-description-navbar-default=Відображення меню навігації з панелі стилі переходів за промовчанням. (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=Містить поширених макрос для шаблони меню навігації. (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=Відображає на навігаційний ланцюжок горизонтально. (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=Відображає в навігації меню, що випадає з Bootstrap кнопками. (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=Мінімально стилі адміністрування (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=From Level 0 (Automatic Copy)
-portlet-display-template-name-from-level-1=From Level 1 (Automatic Copy)
-portlet-display-template-name-from-level-1-to-all-sub-levels=Від рівня 1 до всіх підрівнів (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=From Level 1 with Title (Automatic Copy)
-portlet-display-template-name-from-level-2-with-title=From Level 2 with Title (Automatic Copy)
-portlet-display-template-name-nav-pills=ВЧА таблетки (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=ВЧА таблетки за шириною (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=ВЧА таблетки діаграма з накопиченням (Automatic Translation)
-portlet-display-template-name-nav-tabs=ВЧА вкладки (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=ВЧА вкладки за шириною (Automatic Translation)
-portlet-display-template-name-navbar-default=Адміністрування за промовчанням (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=Relative with Breadcrumb (Automatic Copy)
+portlet-display-template-description-split-button-dropdowns=Відображає випадаючому меню навігації з пунктів меню кореневих показані як кнопки. (Automatic Translation)
+portlet-display-template-name-list-menu=Список меню (Automatic Translation)
+portlet-display-template-name-nav-pills=Таблетки горизонтальний (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=Таблетки, що за шириною (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=Таблетки діаграма з накопиченням (Automatic Translation)
+portlet-display-template-name-nav-tabs=Вкладки (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=Вкладки за шириною (Automatic Translation)
+portlet-display-template-name-navbar-blank=Бар мінімально стилі (Automatic Translation)
+portlet-display-template-name-navbar-default=За промовчанням штрих-стилі (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=Поширених макрос навігації (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=Спліт кнопки меню, що випадає (Automatic Translation)
 root-layout-level=Root Page Level (Automatic Copy)
 root-layout-level-help=Root Page Level (Automatic Copy)
