--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_zh_CN.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=嵌套的下级
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=显示经典主题导航菜单。 (Automatic Translation)
-portlet-display-template-description-custom=显示一个自定义的导航模板。 (Automatic Translation)
-portlet-display-template-description-from-level-0=显示从 0 级导航页面的导航树。 (Automatic Translation)
-portlet-display-template-description-from-level-1=显示从第 1 级导航页面的导航树。 (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=显示从第 1 级导航页面的导航树。所有级别 1 页分级别正在扩大，包括同级个子级别。 (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=显示从第 1 级导航页面的导航树。父页面显示为导航菜单标题。 (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=显示从 2 级导航页面的导航树。父页面显示为导航菜单标题。 (Automatic Translation)
-portlet-display-template-description-nav-pills=显示一个带有引导导航丸的导航菜单。 (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=显示一个带有合理引导导航丸的导航菜单。 (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=显示一个带有堆积引导导航丸的导航菜单。 (Automatic Translation)
-portlet-display-template-description-nav-tabs=显示一个带有引导导航选项卡的导航菜单。 (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=显示一个带有合理引导导航选项卡的导航菜单。 (Automatic Translation)
-portlet-display-template-description-navbar-default=显示一个带有引导导航栏的导航菜单。 (Automatic Translation)
+portlet-display-template-description-list-menu=显示带有列表的导航菜单。 (Automatic Translation)
+portlet-display-template-description-nav-pills=显示导航菜单导航项目丸所示。 (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=显示导航菜单有正当理由的导航项目丸所示。 (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=显示导航菜单堆积的导航项目丸所示。 (Automatic Translation)
+portlet-display-template-description-nav-tabs=与导航项目显示为选项卡显示一个导航菜单。 (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=与合理的导航项目显示为选项卡显示一个导航菜单。 (Automatic Translation)
+portlet-display-template-description-navbar-blank=显示一个带有微风格的导航栏的导航菜单。 (Automatic Translation)
+portlet-display-template-description-navbar-default=显示一个带有默认风格的导航栏的导航菜单。 (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=包含用于导航菜单模板的常见宏。 (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=水平显示痕迹导航。 (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=显示一个带有引导按钮的下拉导航菜单。 (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=微带样式的导航栏 (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=从第0级
-portlet-display-template-name-from-level-1=从第1级
-portlet-display-template-name-from-level-1-to-all-sub-levels=从所有的子级别 1 级 (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=从带标题的第1级
-portlet-display-template-name-from-level-2-with-title=从带标题的第2级
-portlet-display-template-name-nav-pills=资产净值丸 (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=合理的资产净值丸 (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=堆积的 Nav 丸 (Automatic Translation)
-portlet-display-template-name-nav-tabs=导航选项卡 (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=有正当理由的导航选项卡 (Automatic Translation)
-portlet-display-template-name-navbar-default=导航栏默认 (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=与Breadcrumb相关
+portlet-display-template-description-split-button-dropdowns=与根菜单项显示为按钮显示一个下拉导航菜单。 (Automatic Translation)
+portlet-display-template-name-list-menu=列表菜单 (Automatic Translation)
+portlet-display-template-name-nav-pills=丸水平 (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=有正当理由的药丸 (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=堆积的药丸 (Automatic Translation)
+portlet-display-template-name-nav-tabs=选项卡 (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=合理的选项卡 (Automatic Translation)
+portlet-display-template-name-navbar-blank=微风格的酒吧 (Automatic Translation)
+portlet-display-template-name-navbar-default=栏默认样式 (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=导航常见宏 (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=拆分按钮下拉菜单 (Automatic Translation)
 root-layout-level=根页面级别
 root-layout-level-help=Root Page Level (Automatic Copy)
