--- a/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/site-navigation/site-navigation-menu-web/src/main/resources/content/Language_zh_TW.properties
@@ -12,37 +12,25 @@ navigation-items-help=Navigation Entries (Automatic Copy)
 navigation-util=Navigation Util (Automatic Copy)
 nested-children=巢狀下層
 nested-children-help=Nested Children (Automatic Copy)
-portlet-display-template-description-blank-navigation-menu=顯示經典主題導航功能表。 (Automatic Translation)
-portlet-display-template-description-custom=顯示一個自訂的導航模板。 (Automatic Translation)
-portlet-display-template-description-from-level-0=顯示從 0 級導航頁面的導航樹。 (Automatic Translation)
-portlet-display-template-description-from-level-1=顯示從第 1 級導航頁面的導航樹。 (Automatic Translation)
-portlet-display-template-description-from-level-1-to-all-sub-levels=顯示從第 1 級導航頁面的導航樹。所有級別 1 頁分級別正在擴大，包括同級個子級別。 (Automatic Translation)
-portlet-display-template-description-from-level-1-with-title=顯示從第 1 級導航頁面的導航樹。父頁面顯示為導航功能表標題。 (Automatic Translation)
-portlet-display-template-description-from-level-2-with-title=顯示從 2 級導航頁面的導航樹。父頁面顯示為導航功能表標題。 (Automatic Translation)
-portlet-display-template-description-nav-pills=顯示一個帶有引導導航丸的導航功能表。 (Automatic Translation)
-portlet-display-template-description-nav-pills-justified=顯示一個帶有合理引導導航丸的導航功能表。 (Automatic Translation)
-portlet-display-template-description-nav-pills-stacked=顯示一個帶有堆積引導導航丸的導航功能表。 (Automatic Translation)
-portlet-display-template-description-nav-tabs=顯示一個帶有引導導航選項卡的導航功能表。 (Automatic Translation)
-portlet-display-template-description-nav-tabs-justified=顯示一個帶有合理引導導航選項卡的導航功能表。 (Automatic Translation)
-portlet-display-template-description-navbar-default=顯示一個帶有引導巡覽列的導航功能表。 (Automatic Translation)
+portlet-display-template-description-list-menu=顯示帶有清單的導航功能表。 (Automatic Translation)
+portlet-display-template-description-nav-pills=顯示導航功能表導航專案丸所示。 (Automatic Translation)
+portlet-display-template-description-nav-pills-justified=顯示導航功能表有正當理由的導航專案丸所示。 (Automatic Translation)
+portlet-display-template-description-nav-pills-stacked=顯示導航功能表堆積的導航專案丸所示。 (Automatic Translation)
+portlet-display-template-description-nav-tabs=與導航專案顯示為選項卡顯示一個導航功能表。 (Automatic Translation)
+portlet-display-template-description-nav-tabs-justified=與合理的導航專案顯示為選項卡顯示一個導航功能表。 (Automatic Translation)
+portlet-display-template-description-navbar-blank=顯示一個帶有微風格的巡覽列的導航功能表。 (Automatic Translation)
+portlet-display-template-description-navbar-default=顯示一個帶有預設風格的巡覽列的導航功能表。 (Automatic Translation)
 portlet-display-template-description-navigation-menu-macro=包含用於導航功能表範本的常見宏。 (Automatic Translation)
-portlet-display-template-description-relative-with-breadcrumb=水準顯示軌跡瀏覽。 (Automatic Translation)
-portlet-display-template-description-split-button-dropdowns=顯示一個帶有引導按鈕的下拉導航功能表。 (Automatic Translation)
-portlet-display-template-name-blank-navigation-menu=微帶樣式的巡覽列 (Automatic Translation)
-portlet-display-template-name-custom=Custom (Automatic Copy)
-portlet-display-template-name-from-level-0=從等級 0
-portlet-display-template-name-from-level-1=從等級 1
-portlet-display-template-name-from-level-1-to-all-sub-levels=從所有的子級別 1 級 (Automatic Translation)
-portlet-display-template-name-from-level-1-with-title=從含標題的等級 1
-portlet-display-template-name-from-level-2-with-title=從含標題的等級 2
-portlet-display-template-name-nav-pills=資產淨值丸 (Automatic Translation)
-portlet-display-template-name-nav-pills-justified=合理的資產淨值丸 (Automatic Translation)
-portlet-display-template-name-nav-pills-stacked=堆積的 Nav 丸 (Automatic Translation)
-portlet-display-template-name-nav-tabs=導航選項卡 (Automatic Translation)
-portlet-display-template-name-nav-tabs-justified=有正當理由的導航選項卡 (Automatic Translation)
-portlet-display-template-name-navbar-default=巡覽列預設 (Automatic Translation)
-portlet-display-template-name-navigation-menu-macro=Navigation Menu Macro (Automatic Copy)
-portlet-display-template-name-relative-with-breadcrumb=相對於導覽路徑
+portlet-display-template-description-split-button-dropdowns=與根功能表項目顯示為按鈕顯示一個下拉導航功能表。 (Automatic Translation)
+portlet-display-template-name-list-menu=清單功能表 (Automatic Translation)
+portlet-display-template-name-nav-pills=丸水準 (Automatic Translation)
+portlet-display-template-name-nav-pills-justified=有正當理由的藥丸 (Automatic Translation)
+portlet-display-template-name-nav-pills-stacked=堆積的藥丸 (Automatic Translation)
+portlet-display-template-name-nav-tabs=選項卡 (Automatic Translation)
+portlet-display-template-name-nav-tabs-justified=合理的選項卡 (Automatic Translation)
+portlet-display-template-name-navbar-blank=微風格的酒吧 (Automatic Translation)
+portlet-display-template-name-navbar-default=欄預設樣式 (Automatic Translation)
+portlet-display-template-name-navigation-menu-macro=導航常見宏 (Automatic Translation)
 portlet-display-template-name-split-button-dropdowns=分割按鈕下拉式功能表 (Automatic Translation)
 root-layout-level=根頁面階層
 root-layout-level-help=Root Page Level (Automatic Copy)
